// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`full-script baseline: list > parses into the same paragraphs and tokens 1`] = `
{
  "paragraphs": [
    "0-9 @0-61",
    "10-82 @63-489",
    "83-88 @491-515",
    "89-136 @517-789",
    "137-147 @791-845",
  ],
  "tokens": [
    "0:three",
    "0:things",
    "0:changed",
    "0:how",
    "0:our",
    "0:customers",
    "0:get",
    "0:started",
    "0:this",
    "0:year",
    "1:∅",
    "1:first",
    "1:we",
    "1:stopped",
    "1:asking",
    "1:new",
    "1:customers",
    "1:to",
    "1:configure",
    "1:everything",
    "1:before",
    "1:they",
    "1:had",
    "1:seen",
    "1:a",
    "1:single",
    "1:result",
    "1:in",
    "1:the",
    "1:product",
    "1:∅",
    "1:second",
    "1:the",
    "1:importer",
    "1:now",
    "1:previews",
    "1:every",
    "1:column",
    "1:and",
    "1:explains",
    "1:each",
    "1:warning",
    "1:in",
    "1:plain",
    "1:language",
    "1:before",
    "1:anything",
    "1:is",
    "1:saved",
    "1:∅",
    "1:in",
    "1:testing",
    "1:completion",
    "1:rates",
    "1:climbed",
    "1:from",
    "1:fifty",
    "1:one",
    "1:to",
    "1:seventy",
    "1:eight",
    "1:percent",
    "1:within",
    "1:two",
    "1:weeks",
    "1:∅",
    "1:third",
    "1:we",
    "1:removed",
    "1:four",
    "1:setup",
    "1:screens",
    "1:and",
    "1:nobody",
    "1:has",
    "1:asked",
    "1:us",
    "1:to",
    "1:bring",
    "1:any",
    "1:of",
    "1:them",
    "1:back",
    "2:what",
    "2:we",
    "2:plan",
    "2:to",
    "2:do",
    "2:next",
    "3:1[one]",
    "3:ship",
    "3:guided",
    "3:templates",
    "3:so",
    "3:that",
    "3:a",
    "3:new",
    "3:workspace",
    "3:never",
    "3:starts",
    "3:out",
    "3:completely",
    "3:empty",
    "3:2[two]",
    "3:measure",
    "3:whether",
    "3:teams",
    "3:keep",
    "3:the",
    "3:template",
    "3:they",
    "3:picked",
    "3:or",
    "3:replace",
    "3:it",
    "3:within",
    "3:their",
    "3:first",
    "3:month",
    "3:3[three]",
    "3:talk",
    "3:to",
    "3:every",
    "3:customer",
    "3:who",
    "3:cancels",
    "3:in",
    "3:the",
    "3:first",
    "3:thirty",
    "3:days",
    "3:and",
    "3:share",
    "3:what",
    "3:they",
    "3:tell",
    "3:us",
    "4:thank",
    "4:you",
    "4:very",
    "4:much",
    "4:and",
    "4:i",
    "4:am",
    "4:happy",
    "4:to",
    "4:take",
    "4:questions",
  ],
}
`;

exports[`full-script baseline: list > tracks "ad-lib between list items" the same way 1`] = `
[
  "0 i truth=1 c=- t=1 tracking - j=-",
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 i truth=5 c=- t=5 tracking - j=-",
  "3 i truth=7 c=- t=7 tracking - j=-",
  "4 i truth=9 c=- t=9 tracking - j=-",
  "5 f truth=12 c=12 t=- tracking local j=-",
  "6 i truth=14 c=12 t=14 tracking local j=-",
  "7 i truth=16 c=12 t=16 tracking local j=-",
  "8 i truth=18 c=12 t=18 tracking local j=-",
  "9 f truth=20 c=20 t=- tracking local j=-",
  "10 i truth=22 c=20 t=22 tracking local j=-",
  "11 i truth=24 c=20 t=24 tracking local j=-",
  "12 i truth=26 c=20 t=26 tracking local j=-",
  "13 i truth=28 c=20 t=28 tracking local j=-",
  "14 i truth=31 c=20 t=31 tracking local j=-",
  "15 f truth=33 c=33 t=- tracking local j=-",
  "16 i truth=35 c=33 t=35 tracking local j=-",
  "17 i truth=37 c=33 t=37 tracking local j=-",
  "18 i truth=39 c=33 t=39 tracking local j=-",
  "19 i truth=41 c=33 t=41 tracking local j=-",
  "20 i truth=43 c=33 t=43 tracking local j=-",
  "21 f truth=45 c=45 t=- tracking local j=-",
  "22 i truth=47 c=45 t=47 tracking local j=-",
  "23 i truth=50 c=45 t=50 tracking local j=-",
  "24 f truth=52 c=52 t=- tracking local j=-",
  "25 i truth=54 c=52 t=54 tracking local j=-",
  "26 i truth=56 c=52 t=56 tracking local j=-",
  "27 i truth=58 c=52 t=58 tracking local j=-",
  "28 i truth=60 c=52 t=60 tracking local j=-",
  "29 i truth=62 c=52 t=62 tracking local j=-",
  "30 f truth=63 c=63 t=- tracking local j=-",
  "31 i truth=66 c=63 t=66 tracking local j=-",
  "32 i truth=68 c=63 t=68 tracking local j=-",
  "33 i truth=70 c=63 t=70 tracking local j=-",
  "34 f truth=72 c=72 t=- tracking local j=-",
  "35 i truth=74 c=72 t=74 tracking local j=-",
  "36 i truth=76 c=72 t=76 tracking local j=-",
  "37 f truth=78 c=78 t=- tracking local j=-",
  "38 i truth=80 c=78 t=80 tracking local j=-",
  "39 i truth=82 c=78 t=82 tracking local j=-",
  "40 i truth=84 c=78 t=84 tracking local j=-",
  "41 f truth=86 c=86 t=- tracking local j=-",
  "42 i truth=88 c=86 t=88 tracking local j=-",
  "43 i truth=90 c=86 t=90 tracking local j=-",
  "44 i truth=92 c=86 t=92 tracking local j=-",
  "45 i truth=94 c=86 t=94 tracking local j=-",
  "46 f truth=96 c=96 t=- tracking local j=-",
  "47 i truth=98 c=96 t=98 tracking local j=-",
  "48 i truth=100 c=96 t=100 tracking local j=-",
  "49 i truth=102 c=96 t=102 tracking local j=-",
  "50 f truth=102 c=102 t=- tracking local j=-",
  "56 f truth=102 c=102 t=- tracking none j=-",
  "58 i truth=104 c=102 t=104 tracking none j=-",
  "59 i truth=106 c=102 t=106 tracking none j=-",
  "60 i truth=108 c=102 t=108 tracking none j=-",
  "61 i truth=110 c=102 t=110 tracking none j=-",
  "62 f truth=112 c=112 t=- tracking local j=-",
  "63 i truth=114 c=112 t=114 tracking local j=-",
  "64 i truth=116 c=112 t=116 tracking local j=-",
  "65 f truth=118 c=118 t=- tracking local j=-",
  "66 i truth=120 c=118 t=120 tracking local j=-",
  "67 i truth=122 c=118 t=122 tracking local j=-",
  "68 i truth=124 c=118 t=124 tracking local j=-",
  "69 i truth=126 c=118 t=126 tracking local j=-",
  "70 i truth=128 c=118 t=128 tracking local j=-",
  "71 f truth=129 c=129 t=- tracking local j=-",
  "72 i truth=131 c=129 t=131 tracking local j=-",
  "73 i truth=133 c=129 t=133 tracking local j=-",
  "74 i truth=135 c=129 t=135 tracking local j=-",
  "75 i truth=137 c=129 t=137 tracking local j=-",
  "76 f truth=138 c=138 t=- tracking local j=-",
  "77 i truth=140 c=138 t=140 tracking local j=-",
  "78 i truth=142 c=138 t=142 tracking local j=-",
  "79 i truth=144 c=138 t=144 tracking local j=-",
  "80 i truth=146 c=138 t=146 tracking local j=-",
  "81 f truth=147 c=147 t=- tracking local j=-",
]
`;

exports[`full-script baseline: list > tracks "exact read" the same way 1`] = `
[
  "0 i truth=1 c=- t=1 tracking - j=-",
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 i truth=5 c=- t=5 tracking - j=-",
  "3 i truth=7 c=- t=7 tracking - j=-",
  "4 i truth=9 c=- t=9 tracking - j=-",
  "5 f truth=12 c=12 t=- tracking local j=-",
  "6 i truth=14 c=12 t=14 tracking local j=-",
  "7 i truth=16 c=12 t=16 tracking local j=-",
  "8 i truth=18 c=12 t=18 tracking local j=-",
  "9 f truth=20 c=20 t=- tracking local j=-",
  "10 i truth=22 c=20 t=22 tracking local j=-",
  "11 i truth=24 c=20 t=24 tracking local j=-",
  "12 i truth=26 c=20 t=26 tracking local j=-",
  "13 i truth=28 c=20 t=28 tracking local j=-",
  "14 i truth=31 c=20 t=31 tracking local j=-",
  "15 f truth=33 c=33 t=- tracking local j=-",
  "16 i truth=35 c=33 t=35 tracking local j=-",
  "17 i truth=37 c=33 t=37 tracking local j=-",
  "18 i truth=39 c=33 t=39 tracking local j=-",
  "19 i truth=41 c=33 t=41 tracking local j=-",
  "20 i truth=43 c=33 t=43 tracking local j=-",
  "21 f truth=45 c=45 t=- tracking local j=-",
  "22 i truth=47 c=45 t=47 tracking local j=-",
  "23 i truth=50 c=45 t=50 tracking local j=-",
  "24 f truth=52 c=52 t=- tracking local j=-",
  "25 i truth=54 c=52 t=54 tracking local j=-",
  "26 i truth=56 c=52 t=56 tracking local j=-",
  "27 i truth=58 c=52 t=58 tracking local j=-",
  "28 i truth=60 c=52 t=60 tracking local j=-",
  "29 i truth=62 c=52 t=62 tracking local j=-",
  "30 f truth=63 c=63 t=- tracking local j=-",
  "31 i truth=66 c=63 t=66 tracking local j=-",
  "32 i truth=68 c=63 t=68 tracking local j=-",
  "33 i truth=70 c=63 t=70 tracking local j=-",
  "34 f truth=72 c=72 t=- tracking local j=-",
  "35 i truth=74 c=72 t=74 tracking local j=-",
  "36 i truth=76 c=72 t=76 tracking local j=-",
  "37 f truth=78 c=78 t=- tracking local j=-",
  "38 i truth=80 c=78 t=80 tracking local j=-",
  "39 i truth=82 c=78 t=82 tracking local j=-",
  "40 i truth=84 c=78 t=84 tracking local j=-",
  "41 f truth=86 c=86 t=- tracking local j=-",
  "42 i truth=88 c=86 t=88 tracking local j=-",
  "43 i truth=90 c=86 t=90 tracking local j=-",
  "44 i truth=92 c=86 t=92 tracking local j=-",
  "45 i truth=94 c=86 t=94 tracking local j=-",
  "46 f truth=96 c=96 t=- tracking local j=-",
  "47 i truth=98 c=96 t=98 tracking local j=-",
  "48 i truth=100 c=96 t=100 tracking local j=-",
  "49 i truth=102 c=96 t=102 tracking local j=-",
  "50 f truth=104 c=104 t=- tracking local j=-",
  "51 i truth=106 c=104 t=106 tracking local j=-",
  "52 i truth=108 c=104 t=108 tracking local j=-",
  "53 i truth=110 c=104 t=110 tracking local j=-",
  "54 i truth=112 c=104 t=112 tracking local j=-",
  "55 i truth=114 c=104 t=114 tracking local j=-",
  "56 f truth=116 c=116 t=- tracking local j=-",
  "57 i truth=118 c=116 t=118 tracking local j=-",
  "58 i truth=120 c=116 t=120 tracking local j=-",
  "59 i truth=122 c=116 t=122 tracking local j=-",
  "60 i truth=124 c=116 t=124 tracking local j=-",
  "61 i truth=126 c=116 t=126 tracking local j=-",
  "62 f truth=128 c=128 t=- tracking local j=-",
  "63 i truth=130 c=128 t=130 tracking local j=-",
  "64 i truth=132 c=128 t=132 tracking local j=-",
  "65 f truth=134 c=134 t=- tracking local j=-",
  "66 i truth=136 c=134 t=136 tracking local j=-",
  "67 i truth=138 c=134 t=138 tracking local j=-",
  "68 i truth=140 c=134 t=140 tracking local j=-",
  "69 i truth=142 c=134 t=142 tracking local j=-",
  "70 i truth=144 c=134 t=144 tracking local j=-",
  "71 f truth=145 c=145 t=- tracking local j=-",
  "72 i truth=147 c=145 t=147 tracking local j=-",
  "73 f truth=147 c=147 t=- tracking local j=-",
]
`;

exports[`full-script baseline: list > tracks "noisy read, seed 1" the same way 1`] = `
[
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 f truth=5 c=5 t=- tracking local j=-",
  "3 i truth=7 c=5 t=7 tracking local j=-",
  "4 i truth=9 c=5 t=8 tracking local j=-",
  "5 i truth=12 c=5 t=11 tracking local j=-",
  "6 f truth=14 c=14 t=- tracking local j=-",
  "7 i truth=16 c=14 t=16 tracking local j=-",
  "8 i truth=18 c=14 t=18 tracking local j=-",
  "9 i truth=20 c=14 t=19 tracking local j=-",
  "10 i truth=22 c=14 t=21 tracking local j=-",
  "11 i truth=24 c=14 t=24 tracking local j=-",
  "12 f truth=25 c=25 t=- tracking local j=-",
  "13 i truth=27 c=25 t=27 tracking local j=-",
  "14 i truth=29 c=25 t=29 tracking local j=-",
  "16 i truth=33 c=25 t=33 tracking local j=-",
  "17 i truth=35 c=25 t=35 tracking local j=-",
  "18 f truth=37 c=37 t=- tracking local j=-",
  "19 i truth=39 c=37 t=39 tracking local j=-",
  "20 i truth=41 c=37 t=41 tracking local j=-",
  "21 i truth=43 c=37 t=42 tracking local j=-",
  "22 f truth=45 c=45 t=- tracking local j=-",
  "23 i truth=46 c=45 t=46 tracking local j=-",
  "24 i truth=48 c=45 t=48 tracking local j=-",
  "25 i truth=51 c=45 t=51 tracking local j=-",
  "26 i truth=53 c=45 t=53 tracking local j=-",
  "27 f truth=53 c=53 t=- tracking local j=-",
  "28 i truth=55 c=53 t=55 tracking local j=-",
  "29 i truth=57 c=53 t=56 tracking local j=-",
  "30 i truth=59 c=53 t=59 tracking local j=-",
  "31 i truth=61 c=53 t=61 tracking local j=-",
  "32 i truth=63 c=53 t=63 tracking local j=-",
  "33 f truth=66 c=66 t=- tracking local j=-",
  "34 i truth=68 c=66 t=68 tracking local j=-",
  "35 i truth=69 c=66 t=69 tracking local j=-",
  "36 i truth=71 c=66 t=71 tracking local j=-",
  "37 i truth=73 c=66 t=72 tracking local j=-",
  "38 f truth=75 c=75 t=- tracking local j=-",
  "39 i truth=77 c=75 t=77 tracking local j=-",
  "40 i truth=78 c=75 t=78 tracking local j=-",
  "42 i truth=82 c=75 t=81 tracking local j=-",
  "43 f truth=82 c=82 t=- tracking local j=-",
  "44 i truth=84 c=82 t=84 tracking local j=-",
  "45 i truth=86 c=82 t=86 tracking local j=-",
  "46 i truth=88 c=82 t=87 tracking local j=-",
  "47 f truth=90 c=90 t=- tracking local j=-",
  "48 i truth=91 c=90 t=91 tracking local j=-",
  "49 i truth=93 c=90 t=93 tracking local j=-",
  "51 f truth=96 c=96 t=- tracking local j=-",
  "52 i truth=98 c=96 t=97 tracking local j=-",
  "53 i truth=100 c=96 t=99 tracking local j=-",
  "54 f truth=102 c=102 t=- tracking local j=-",
  "56 i truth=105 c=102 t=105 tracking local j=-",
  "57 i truth=107 c=102 t=106 tracking local j=-",
  "58 i truth=109 c=102 t=109 tracking local j=-",
  "59 i truth=111 c=102 t=111 tracking local j=-",
  "60 f truth=113 c=113 t=- tracking local j=-",
  "61 i truth=115 c=113 t=114 tracking local j=-",
  "62 i truth=117 c=113 t=117 tracking local j=-",
  "63 f truth=119 c=118 t=- tracking local j=-",
  "64 i truth=121 c=118 t=120 tracking local j=-",
  "65 i truth=123 c=118 t=122 tracking local j=-",
  "66 i truth=125 c=118 t=124 tracking local j=-",
  "67 i truth=127 c=118 t=127 tracking local j=-",
  "68 f truth=127 c=127 t=- tracking local j=-",
  "69 i truth=129 c=127 t=129 tracking local j=-",
  "71 i truth=132 c=127 t=132 tracking local j=-",
  "72 i truth=134 c=127 t=133 tracking local j=-",
  "73 i truth=136 c=127 t=136 tracking local j=-",
  "74 f truth=137 c=137 t=- tracking local j=-",
  "75 i truth=139 c=137 t=139 tracking local j=-",
  "76 i truth=141 c=137 t=141 tracking local j=-",
  "77 i truth=143 c=137 t=143 tracking local j=-",
  "78 i truth=144 c=137 t=144 tracking local j=-",
  "79 i truth=146 c=137 t=145 tracking local j=-",
  "80 f truth=147 c=147 t=- tracking local j=-",
]
`;

exports[`full-script baseline: list > tracks "noisy read, seed 2" the same way 1`] = `
[
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 i truth=5 c=- t=5 tracking - j=-",
  "3 f truth=6 c=6 t=- tracking local j=-",
  "4 i truth=8 c=6 t=8 tracking local j=-",
  "6 i truth=11 c=6 t=11 tracking local j=-",
  "7 i truth=13 c=6 t=13 tracking local j=-",
  "8 f truth=14 c=14 t=- tracking local j=-",
  "12 f truth=20 c=18 t=- tracking local j=-",
  "13 i truth=22 c=18 t=22 tracking local j=-",
  "14 i truth=23 c=18 t=23 tracking local j=-",
  "15 i truth=25 c=18 t=25 tracking local j=-",
  "16 f truth=27 c=27 t=- tracking local j=-",
  "17 i truth=28 c=27 t=28 tracking local j=-",
  "18 i truth=31 c=27 t=29 tracking local j=-",
  "19 i truth=33 c=27 t=33 tracking local j=-",
  "20 i truth=35 c=27 t=35 tracking local j=-",
  "21 f truth=36 c=36 t=- tracking local j=-",
  "22 i truth=38 c=36 t=37 tracking local j=-",
  "23 i truth=40 c=36 t=40 tracking local j=-",
  "24 f truth=42 c=42 t=- tracking local j=-",
  "25 i truth=44 c=42 t=44 tracking local j=-",
  "26 i truth=46 c=42 t=46 tracking local j=-",
  "27 i truth=48 c=42 t=48 tracking local j=-",
  "28 i truth=50 c=42 t=50 tracking local j=-",
  "29 f truth=51 c=51 t=- tracking local j=-",
  "30 i truth=53 c=51 t=52 tracking local j=-",
  "31 i truth=54 c=51 t=54 tracking local j=-",
  "32 i truth=56 c=51 t=56 tracking local j=-",
  "33 i truth=58 c=51 t=58 tracking local j=-",
  "34 f truth=60 c=60 t=- tracking local j=-",
  "35 i truth=62 c=60 t=61 tracking local j=-",
  "36 i truth=64 c=60 t=63 tracking local j=-",
  "37 i truth=67 c=60 t=67 tracking local j=-",
  "38 f truth=69 c=69 t=- tracking local j=-",
  "39 i truth=71 c=69 t=71 tracking local j=-",
  "40 i truth=73 c=69 t=73 tracking local j=-",
  "41 i truth=75 c=69 t=75 tracking local j=-",
  "42 i truth=77 c=69 t=76 tracking local j=-",
  "43 i truth=79 c=69 t=79 tracking local j=-",
  "44 f truth=81 c=81 t=- tracking local j=-",
  "45 i truth=83 c=81 t=83 tracking local j=-",
  "46 i truth=85 c=81 t=85 tracking local j=-",
  "47 i truth=86 c=81 t=86 tracking local j=-",
  "48 f truth=87 c=86 t=- tracking local j=-",
  "49 i truth=89 c=86 t=89 tracking local j=-",
  "50 i truth=90 c=86 t=90 tracking local j=-",
  "51 f truth=92 c=92 t=- tracking local j=-",
  "52 i truth=94 c=92 t=93 tracking local j=-",
  "53 i truth=96 c=92 t=96 tracking local j=-",
  "54 f truth=98 c=98 t=- tracking local j=-",
  "55 i truth=99 c=98 t=99 tracking local j=-",
  "56 i truth=101 c=98 t=101 tracking local j=-",
  "57 f truth=103 c=103 t=- tracking local j=-",
  "58 i truth=105 c=103 t=104 tracking local j=-",
  "59 i truth=107 c=103 t=107 tracking local j=-",
  "61 i truth=110 c=103 t=109 tracking local j=-",
  "62 i truth=112 c=103 t=111 tracking local j=-",
  "63 f truth=113 c=113 t=- tracking local j=-",
  "64 i truth=115 c=113 t=115 tracking local j=-",
  "65 i truth=117 c=113 t=117 tracking local j=-",
  "67 i truth=121 c=113 t=121 tracking local j=-",
  "68 f truth=122 c=122 t=- tracking local j=-",
  "69 i truth=124 c=122 t=124 tracking local j=-",
  "70 i truth=126 c=122 t=125 tracking local j=-",
  "71 f truth=128 c=128 t=- tracking local j=-",
  "72 i truth=130 c=128 t=130 tracking local j=-",
  "73 i truth=131 c=128 t=131 tracking local j=-",
  "74 f truth=133 c=133 t=- tracking local j=-",
  "75 i truth=134 c=133 t=134 tracking local j=-",
  "76 i truth=136 c=133 t=135 tracking local j=-",
  "77 i truth=138 c=133 t=137 tracking local j=-",
  "78 i truth=140 c=133 t=139 tracking local j=-",
  "79 f truth=141 c=141 t=- tracking local j=-",
  "81 i truth=145 c=141 t=144 tracking local j=-",
  "82 i truth=147 c=141 t=146 tracking local j=-",
  "83 f truth=147 c=147 t=- tracking local j=-",
]
`;

exports[`full-script baseline: list > tracks "noisy read, seed 3" the same way 1`] = `
[
  "1 i truth=2 c=- t=2 tracking - j=-",
  "2 i truth=4 c=- t=4 tracking - j=-",
  "3 i truth=6 c=- t=6 tracking - j=-",
  "4 i truth=8 c=- t=7 tracking - j=-",
  "5 f truth=9 c=9 t=- tracking local j=-",
  "6 i truth=12 c=9 t=12 tracking local j=-",
  "7 i truth=14 c=9 t=14 tracking local j=-",
  "8 i truth=16 c=9 t=16 tracking local j=-",
  "9 i truth=18 c=9 t=18 tracking local j=-",
  "10 f truth=19 c=19 t=- tracking local j=-",
  "11 i truth=21 c=19 t=21 tracking local j=-",
  "12 i truth=23 c=19 t=22 tracking local j=-",
  "13 f truth=25 c=25 t=- tracking local j=-",
  "14 i truth=27 c=25 t=27 tracking local j=-",
  "15 i truth=29 c=25 t=29 tracking local j=-",
  "16 i truth=32 c=25 t=32 tracking local j=-",
  "17 i truth=34 c=25 t=33 tracking local j=-",
  "18 f truth=35 c=35 t=- tracking local j=-",
  "19 i truth=37 c=35 t=37 tracking local j=-",
  "20 i truth=39 c=35 t=39 tracking local j=-",
  "21 i truth=41 c=35 t=41 tracking local j=-",
  "22 f truth=43 c=43 t=- tracking local j=-",
  "23 i truth=45 c=43 t=44 tracking local j=-",
  "24 i truth=47 c=43 t=47 tracking local j=-",
  "25 i truth=50 c=43 t=48 tracking local j=-",
  "26 i truth=52 c=43 t=51 tracking local j=-",
  "27 i truth=54 c=43 t=54 tracking local j=-",
  "28 f truth=55 c=55 t=- tracking local j=-",
  "29 i truth=57 c=55 t=56 tracking local j=-",
  "30 i truth=59 c=55 t=59 tracking local j=-",
  "31 f truth=61 c=61 t=- tracking local j=-",
  "32 i truth=63 c=61 t=62 tracking local j=-",
  "33 i truth=66 c=61 t=64 tracking local j=-",
  "34 i truth=67 c=61 t=67 tracking local j=-",
  "35 f truth=69 c=69 t=- tracking local j=-",
  "36 i truth=70 c=69 t=70 tracking local j=-",
  "37 i truth=72 c=69 t=71 tracking local j=-",
  "38 i truth=74 c=69 t=73 tracking local j=-",
  "39 i truth=76 c=69 t=76 tracking local j=-",
  "41 f truth=80 c=80 t=- tracking local j=-",
  "42 i truth=82 c=80 t=81 tracking local j=-",
  "43 i truth=83 c=80 t=83 tracking local j=-",
  "44 f truth=85 c=85 t=- tracking local j=-",
  "45 i truth=86 c=85 t=86 tracking local j=-",
  "46 i truth=88 c=85 t=87 tracking local j=-",
  "47 i truth=90 c=85 t=89 tracking local j=-",
  "48 i truth=92 c=85 t=92 tracking local j=-",
  "49 i truth=94 c=85 t=94 tracking local j=-",
  "50 f truth=95 c=95 t=- tracking local j=-",
  "51 i truth=97 c=95 t=97 tracking local j=-",
  "52 i truth=99 c=95 t=99 tracking local j=-",
  "53 i truth=101 c=95 t=101 tracking local j=-",
  "54 f truth=103 c=103 t=- tracking local j=-",
  "55 i truth=105 c=103 t=105 tracking local j=-",
  "56 i truth=107 c=103 t=107 tracking local j=-",
  "57 i truth=109 c=103 t=109 tracking local j=-",
  "58 f truth=110 c=110 t=- tracking local j=-",
  "59 i truth=112 c=110 t=112 tracking local j=-",
  "60 i truth=114 c=110 t=114 tracking local j=-",
  "61 i truth=116 c=110 t=116 tracking local j=-",
  "62 i truth=118 c=110 t=118 tracking local j=-",
  "63 i truth=120 c=110 t=119 tracking local j=-",
  "64 f truth=122 c=122 t=- tracking local j=-",
  "65 i truth=123 c=122 t=123 tracking local j=-",
  "66 i truth=125 c=122 t=124 tracking local j=-",
  "67 i truth=126 c=122 t=126 tracking local j=-",
  "68 i truth=128 c=122 t=128 tracking local j=-",
  "69 f truth=129 c=129 t=- tracking local j=-",
  "70 i truth=131 c=129 t=131 tracking local j=-",
  "71 i truth=133 c=129 t=133 tracking local j=-",
  "72 i truth=135 c=129 t=135 tracking local j=-",
  "74 f truth=138 c=138 t=- tracking local j=-",
  "75 i truth=140 c=138 t=139 tracking local j=-",
  "76 i truth=142 c=138 t=141 tracking local j=-",
  "77 i truth=144 c=138 t=144 tracking local j=-",
  "78 f truth=146 c=146 t=- tracking local j=-",
  "79 f truth=147 c=147 t=- tracking local j=-",
]
`;

exports[`full-script baseline: list > tracks "skips a list item" the same way 1`] = `
[
  "0 i truth=1 c=- t=1 tracking - j=-",
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 i truth=5 c=- t=5 tracking - j=-",
  "3 f truth=7 c=7 t=- tracking local j=-",
  "4 i truth=9 c=7 t=9 tracking local j=-",
  "5 i truth=12 c=7 t=12 tracking local j=-",
  "6 i truth=14 c=7 t=14 tracking local j=-",
  "7 i truth=16 c=7 t=16 tracking local j=-",
  "8 f truth=18 c=18 t=- tracking local j=-",
  "9 i truth=20 c=18 t=20 tracking local j=-",
  "10 i truth=22 c=18 t=22 tracking local j=-",
  "11 i truth=24 c=18 t=24 tracking local j=-",
  "12 i truth=26 c=18 t=26 tracking local j=-",
  "13 i truth=28 c=18 t=28 tracking local j=-",
  "14 f truth=66 c=29 t=- tracking local j=-",
  "16 i truth=70 c=29 t=70 tracking local j=-",
  "17 f truth=72 c=72 t=- tracking local j=-",
  "18 i truth=74 c=72 t=74 tracking local j=-",
  "19 i truth=76 c=72 t=76 tracking local j=-",
  "20 i truth=78 c=72 t=78 tracking local j=-",
  "21 f truth=80 c=80 t=- tracking local j=-",
  "22 i truth=82 c=80 t=82 tracking local j=-",
  "23 i truth=84 c=80 t=84 tracking local j=-",
  "24 i truth=86 c=80 t=86 tracking local j=-",
  "25 i truth=88 c=80 t=88 tracking local j=-",
  "26 f truth=90 c=90 t=- tracking local j=-",
  "27 i truth=92 c=90 t=92 tracking local j=-",
  "28 i truth=94 c=90 t=94 tracking local j=-",
  "29 i truth=96 c=90 t=96 tracking local j=-",
  "30 f truth=98 c=98 t=- tracking local j=-",
  "31 i truth=100 c=98 t=100 tracking local j=-",
  "32 i truth=102 c=98 t=102 tracking local j=-",
  "33 i truth=104 c=98 t=104 tracking local j=-",
  "34 i truth=106 c=98 t=106 tracking local j=-",
  "35 i truth=108 c=98 t=108 tracking local j=-",
  "36 f truth=109 c=109 t=- tracking local j=-",
  "37 i truth=111 c=109 t=111 tracking local j=-",
  "38 i truth=113 c=109 t=113 tracking local j=-",
  "39 i truth=115 c=109 t=115 tracking local j=-",
  "40 i truth=117 c=109 t=117 tracking local j=-",
  "41 i truth=119 c=109 t=119 tracking local j=-",
  "42 f truth=121 c=121 t=- tracking local j=-",
  "43 i truth=123 c=121 t=123 tracking local j=-",
  "44 i truth=125 c=121 t=125 tracking local j=-",
  "45 i truth=127 c=121 t=127 tracking local j=-",
  "46 i truth=129 c=121 t=129 tracking local j=-",
  "47 f truth=131 c=131 t=- tracking local j=-",
  "48 i truth=133 c=131 t=133 tracking local j=-",
  "49 i truth=135 c=131 t=135 tracking local j=-",
  "50 i truth=137 c=131 t=137 tracking local j=-",
  "51 i truth=139 c=131 t=139 tracking local j=-",
  "52 f truth=141 c=141 t=- tracking local j=-",
  "53 i truth=143 c=141 t=143 tracking local j=-",
  "54 i truth=145 c=141 t=145 tracking local j=-",
  "55 i truth=147 c=141 t=147 tracking local j=-",
  "56 f truth=147 c=147 t=- tracking local j=-",
]
`;

exports[`full-script baseline: talk > parses into the same paragraphs and tokens 1`] = `
{
  "paragraphs": [
    "0-25 @0-148",
    "26-58 @150-322",
    "59-101 @324-574",
    "102-136 @576-791",
    "137-167 @793-973",
    "168-194 @975-1155",
    "195-228 @1157-1348",
    "229-256 @1350-1499",
  ],
  "tokens": [
    "0:good",
    "0:morning",
    "0:and",
    "0:thank",
    "0:you",
    "0:very",
    "0:much",
    "0:for",
    "0:coming",
    "0:today",
    "0:i",
    "0:want",
    "0:to",
    "0:share",
    "0:what",
    "0:our",
    "0:team",
    "0:learned",
    "0:while",
    "0:rebuilding",
    "0:the",
    "0:onboarding",
    "0:flow",
    "0:for",
    "0:new",
    "0:customers",
    "1:at",
    "1:the",
    "1:end",
    "1:of",
    "1:the",
    "1:day",
    "1:onboarding",
    "1:is",
    "1:a",
    "1:promise",
    "1:we",
    "1:tell",
    "1:people",
    "1:that",
    "1:the",
    "1:product",
    "1:will",
    "1:make",
    "1:their",
    "1:work",
    "1:easier",
    "1:and",
    "1:the",
    "1:first",
    "1:ten",
    "1:minutes",
    "1:either",
    "1:keep",
    "1:that",
    "1:promise",
    "1:or",
    "1:break",
    "1:it",
    "2:last",
    "2:spring",
    "2:we",
    "2:interviewed",
    "2:forty",
    "2:customers",
    "2:who",
    "2:had",
    "2:cancelled",
    "2:within",
    "2:their",
    "2:first",
    "2:month",
    "2:almost",
    "2:every",
    "2:one",
    "2:of",
    "2:them",
    "2:described",
    "2:the",
    "2:same",
    "2:moment",
    "2:they",
    "2:imported",
    "2:a",
    "2:spreadsheet",
    "2:saw",
    "2:a",
    "2:wall",
    "2:of",
    "2:warnings",
    "2:and",
    "2:gave",
    "2:up",
    "2:and",
    "2:that",
    "2:is",
    "2:why",
    "2:we",
    "2:started",
    "2:with",
    "2:the",
    "2:importer",
    "3:the",
    "3:new",
    "3:importer",
    "3:previews",
    "3:every",
    "3:column",
    "3:before",
    "3:anything",
    "3:is",
    "3:saved",
    "3:it",
    "3:explains",
    "3:each",
    "3:warning",
    "3:in",
    "3:plain",
    "3:language",
    "3:and",
    "3:suggests",
    "3:a",
    "3:fix",
    "3:in",
    "3:testing",
    "3:completion",
    "3:rates",
    "3:climbed",
    "3:from",
    "3:fifty",
    "3:percent",
    "3:to",
    "3:eighty",
    "3:five",
    "3:percent",
    "3:in",
    "3:2025[twenty twenty five|two thousand twenty five]",
    "4:we",
    "4:also",
    "4:removed",
    "4:four",
    "4:setup",
    "4:screens",
    "4:nobody",
    "4:missed",
    "4:them",
    "4:at",
    "4:the",
    "4:end",
    "4:of",
    "4:the",
    "4:day",
    "4:fewer",
    "4:decisions",
    "4:up",
    "4:front",
    "4:meant",
    "4:more",
    "4:people",
    "4:reached",
    "4:the",
    "4:dashboard",
    "4:and",
    "4:that",
    "4:is",
    "4:why",
    "4:retention",
    "4:improved",
    "5:our",
    "5:next",
    "5:experiment",
    "5:is",
    "5:guided",
    "5:templates",
    "5:instead",
    "5:of",
    "5:an",
    "5:empty",
    "5:workspace",
    "5:new",
    "5:customers",
    "5:pick",
    "5:a",
    "5:template",
    "5:that",
    "5:matches",
    "5:their",
    "5:industry",
    "5:whether",
    "5:that",
    "5:is",
    "5:logistics",
    "5:healthcare",
    "5:or",
    "5:retail",
    "6:there",
    "6:are",
    "6:risks",
    "6:templates",
    "6:can",
    "6:feel",
    "6:generic",
    "6:and",
    "6:some",
    "6:teams",
    "6:want",
    "6:a",
    "6:blank",
    "6:canvas",
    "6:so",
    "6:every",
    "6:template",
    "6:will",
    "6:be",
    "6:optional",
    "6:and",
    "6:we",
    "6:will",
    "6:measure",
    "6:whether",
    "6:people",
    "6:keep",
    "6:them",
    "6:or",
    "6:delete",
    "6:them",
    "6:within",
    "6:a",
    "6:week",
    "7:to",
    "7:wrap",
    "7:up",
    "7:listen",
    "7:to",
    "7:the",
    "7:people",
    "7:who",
    "7:leave",
    "7:fix",
    "7:the",
    "7:first",
    "7:ten",
    "7:minutes",
    "7:and",
    "7:measure",
    "7:everything",
    "7:thank",
    "7:you",
    "7:very",
    "7:much",
    "7:and",
    "7:i",
    "7:am",
    "7:happy",
    "7:to",
    "7:take",
    "7:questions",
  ],
}
`;

exports[`full-script baseline: talk > tracks "ad-lib then resumes" the same way 1`] = `
[
  "0 i truth=1 c=- t=1 tracking - j=-",
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 f truth=5 c=5 t=- tracking local j=-",
  "3 i truth=7 c=5 t=7 tracking local j=-",
  "4 i truth=9 c=5 t=9 tracking local j=-",
  "5 i truth=11 c=5 t=11 tracking local j=-",
  "6 i truth=13 c=5 t=13 tracking local j=-",
  "7 i truth=15 c=5 t=15 tracking local j=-",
  "8 f truth=16 c=16 t=- tracking local j=-",
  "9 i truth=18 c=16 t=18 tracking local j=-",
  "10 i truth=20 c=16 t=20 tracking local j=-",
  "11 i truth=22 c=16 t=22 tracking local j=-",
  "12 i truth=24 c=16 t=24 tracking local j=-",
  "13 f truth=26 c=26 t=- tracking local j=-",
  "14 i truth=28 c=26 t=28 tracking local j=-",
  "15 i truth=30 c=26 t=30 tracking local j=-",
  "16 i truth=32 c=26 t=32 tracking local j=-",
  "17 i truth=34 c=26 t=34 tracking local j=-",
  "18 i truth=36 c=26 t=36 tracking local j=-",
  "19 f truth=38 c=38 t=- tracking local j=-",
  "20 i truth=40 c=38 t=40 tracking local j=-",
  "21 i truth=42 c=38 t=42 tracking local j=-",
  "22 i truth=44 c=38 t=44 tracking local j=-",
  "23 f truth=45 c=45 t=- tracking local j=-",
  "24 i truth=47 c=45 t=47 tracking local j=-",
  "25 i truth=49 c=45 t=49 tracking local j=-",
  "26 i truth=51 c=45 t=51 tracking local j=-",
  "27 f truth=53 c=53 t=- tracking local j=-",
  "28 i truth=55 c=53 t=55 tracking local j=-",
  "29 i truth=57 c=53 t=57 tracking local j=-",
  "30 i truth=58 c=53 t=58 tracking local j=-",
  "33 f truth=58 c=58 t=- tracking local j=-",
  "37 f truth=58 c=58 t=- tracking none j=-",
  "39 i truth=60 c=58 t=60 tracking none j=-",
  "40 i truth=62 c=58 t=62 tracking none j=-",
  "41 i truth=64 c=58 t=64 tracking none j=-",
  "42 i truth=66 c=58 t=66 tracking none j=-",
  "43 f truth=68 c=68 t=- tracking local j=-",
  "44 i truth=70 c=68 t=70 tracking local j=-",
  "45 i truth=72 c=68 t=72 tracking local j=-",
  "46 f truth=74 c=74 t=- tracking local j=-",
  "47 i truth=76 c=74 t=76 tracking local j=-",
  "48 i truth=78 c=74 t=78 tracking local j=-",
  "49 i truth=80 c=74 t=80 tracking local j=-",
  "50 i truth=82 c=74 t=82 tracking local j=-",
  "51 i truth=84 c=74 t=84 tracking local j=-",
  "52 f truth=86 c=86 t=- tracking local j=-",
  "53 i truth=88 c=86 t=88 tracking local j=-",
  "54 i truth=90 c=86 t=90 tracking local j=-",
  "55 f truth=92 c=92 t=- tracking local j=-",
  "56 i truth=94 c=92 t=94 tracking local j=-",
  "57 i truth=96 c=92 t=96 tracking local j=-",
  "58 i truth=98 c=92 t=98 tracking local j=-",
  "59 f truth=100 c=100 t=- tracking local j=-",
  "60 i truth=102 c=100 t=102 tracking local j=-",
  "61 i truth=104 c=100 t=104 tracking local j=-",
  "62 i truth=106 c=100 t=106 tracking local j=-",
  "63 f truth=108 c=108 t=- tracking local j=-",
  "64 i truth=110 c=108 t=110 tracking local j=-",
  "65 i truth=112 c=108 t=112 tracking local j=-",
  "66 i truth=114 c=108 t=114 tracking local j=-",
  "67 i truth=116 c=108 t=116 tracking local j=-",
  "68 f truth=117 c=117 t=- tracking local j=-",
  "69 i truth=119 c=117 t=119 tracking local j=-",
  "70 i truth=121 c=117 t=121 tracking local j=-",
  "71 i truth=123 c=117 t=123 tracking local j=-",
  "72 i truth=125 c=117 t=125 tracking local j=-",
  "73 f truth=126 c=126 t=- tracking local j=-",
  "74 i truth=128 c=126 t=128 tracking local j=-",
  "75 i truth=130 c=126 t=130 tracking local j=-",
  "76 i truth=132 c=126 t=132 tracking local j=-",
  "77 f truth=133 c=133 t=- tracking local j=-",
  "78 i truth=135 c=133 t=135 tracking local j=-",
  "80 i truth=137 c=133 t=137 tracking local j=-",
  "81 f truth=138 c=138 t=- tracking local j=-",
  "82 i truth=140 c=138 t=140 tracking local j=-",
  "83 i truth=142 c=138 t=142 tracking local j=-",
  "84 i truth=144 c=138 t=144 tracking local j=-",
  "85 f truth=145 c=145 t=- tracking local j=-",
  "86 i truth=147 c=145 t=147 tracking local j=-",
  "87 i truth=149 c=145 t=149 tracking local j=-",
  "88 f truth=151 c=151 t=- tracking local j=-",
  "89 i truth=153 c=151 t=153 tracking local j=-",
  "90 i truth=155 c=151 t=155 tracking local j=-",
  "91 i truth=157 c=151 t=157 tracking local j=-",
  "92 i truth=159 c=151 t=159 tracking local j=-",
  "93 f truth=160 c=160 t=- tracking local j=-",
  "94 i truth=162 c=160 t=162 tracking local j=-",
  "95 i truth=164 c=160 t=164 tracking local j=-",
  "96 i truth=166 c=160 t=166 tracking local j=-",
  "97 f truth=167 c=167 t=- tracking local j=-",
  "98 i truth=169 c=167 t=169 tracking local j=-",
  "99 i truth=171 c=167 t=171 tracking local j=-",
  "100 i truth=173 c=167 t=173 tracking local j=-",
  "101 i truth=175 c=167 t=175 tracking local j=-",
  "102 f truth=176 c=176 t=- tracking local j=-",
  "103 i truth=178 c=176 t=178 tracking local j=-",
  "104 i truth=180 c=176 t=180 tracking local j=-",
  "105 f truth=182 c=182 t=- tracking local j=-",
  "106 i truth=184 c=182 t=184 tracking local j=-",
  "107 i truth=186 c=182 t=186 tracking local j=-",
  "108 i truth=188 c=182 t=188 tracking local j=-",
  "109 i truth=190 c=182 t=190 tracking local j=-",
  "110 f truth=191 c=191 t=- tracking local j=-",
  "111 i truth=193 c=191 t=193 tracking local j=-",
  "112 i truth=195 c=191 t=195 tracking local j=-",
  "113 i truth=197 c=191 t=197 tracking local j=-",
  "114 i truth=199 c=191 t=199 tracking local j=-",
  "115 f truth=201 c=201 t=- tracking local j=-",
  "116 i truth=203 c=201 t=203 tracking local j=-",
  "117 i truth=205 c=201 t=205 tracking local j=-",
  "118 i truth=207 c=201 t=207 tracking local j=-",
  "119 i truth=209 c=201 t=209 tracking local j=-",
  "120 f truth=211 c=211 t=- tracking local j=-",
  "121 i truth=213 c=211 t=213 tracking local j=-",
  "122 i truth=215 c=211 t=215 tracking local j=-",
  "123 i truth=217 c=211 t=217 tracking local j=-",
  "124 i truth=219 c=211 t=219 tracking local j=-",
  "125 i truth=221 c=211 t=221 tracking local j=-",
  "126 f truth=223 c=223 t=- tracking local j=-",
  "127 i truth=225 c=223 t=225 tracking local j=-",
  "128 i truth=227 c=223 t=227 tracking local j=-",
  "129 i truth=229 c=223 t=229 tracking local j=-",
  "130 i truth=231 c=223 t=231 tracking local j=-",
  "131 i truth=233 c=223 t=233 tracking local j=-",
  "132 f truth=235 c=235 t=- tracking local j=-",
  "133 i truth=237 c=235 t=237 tracking local j=-",
  "134 i truth=239 c=235 t=239 tracking local j=-",
  "135 i truth=241 c=235 t=241 tracking local j=-",
  "136 f truth=243 c=243 t=- tracking local j=-",
  "137 i truth=245 c=243 t=245 tracking local j=-",
  "138 i truth=247 c=243 t=247 tracking local j=-",
  "139 i truth=249 c=243 t=249 tracking local j=-",
  "140 i truth=251 c=243 t=251 tracking local j=-",
  "141 i truth=253 c=243 t=253 tracking local j=-",
  "142 f truth=255 c=255 t=- tracking local j=-",
  "143 f truth=256 c=256 t=- tracking local j=-",
]
`;

exports[`full-script baseline: talk > tracks "exact read" the same way 1`] = `
[
  "0 i truth=1 c=- t=1 tracking - j=-",
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 f truth=5 c=5 t=- tracking local j=-",
  "3 i truth=7 c=5 t=7 tracking local j=-",
  "4 i truth=9 c=5 t=9 tracking local j=-",
  "5 i truth=11 c=5 t=11 tracking local j=-",
  "6 i truth=13 c=5 t=13 tracking local j=-",
  "7 i truth=15 c=5 t=15 tracking local j=-",
  "8 f truth=16 c=16 t=- tracking local j=-",
  "9 i truth=18 c=16 t=18 tracking local j=-",
  "10 i truth=20 c=16 t=20 tracking local j=-",
  "11 i truth=22 c=16 t=22 tracking local j=-",
  "12 i truth=24 c=16 t=24 tracking local j=-",
  "13 f truth=26 c=26 t=- tracking local j=-",
  "14 i truth=28 c=26 t=28 tracking local j=-",
  "15 i truth=30 c=26 t=30 tracking local j=-",
  "16 i truth=32 c=26 t=32 tracking local j=-",
  "17 i truth=34 c=26 t=34 tracking local j=-",
  "18 i truth=36 c=26 t=36 tracking local j=-",
  "19 f truth=38 c=38 t=- tracking local j=-",
  "20 i truth=40 c=38 t=40 tracking local j=-",
  "21 i truth=42 c=38 t=42 tracking local j=-",
  "22 i truth=44 c=38 t=44 tracking local j=-",
  "23 f truth=45 c=45 t=- tracking local j=-",
  "24 i truth=47 c=45 t=47 tracking local j=-",
  "25 i truth=49 c=45 t=49 tracking local j=-",
  "26 i truth=51 c=45 t=51 tracking local j=-",
  "27 f truth=53 c=53 t=- tracking local j=-",
  "28 i truth=55 c=53 t=55 tracking local j=-",
  "29 i truth=57 c=53 t=57 tracking local j=-",
  "30 i truth=59 c=53 t=59 tracking local j=-",
  "31 i truth=61 c=53 t=61 tracking local j=-",
  "32 i truth=63 c=53 t=63 tracking local j=-",
  "33 f truth=64 c=64 t=- tracking local j=-",
  "34 i truth=66 c=64 t=66 tracking local j=-",
  "35 i truth=68 c=64 t=68 tracking local j=-",
  "36 i truth=70 c=64 t=70 tracking local j=-",
  "37 f truth=71 c=71 t=- tracking local j=-",
  "38 i truth=73 c=71 t=73 tracking local j=-",
  "39 i truth=75 c=71 t=75 tracking local j=-",
  "40 i truth=77 c=71 t=77 tracking local j=-",
  "41 i truth=79 c=71 t=79 tracking local j=-",
  "42 i truth=81 c=71 t=81 tracking local j=-",
  "43 f truth=83 c=83 t=- tracking local j=-",
  "44 i truth=85 c=83 t=85 tracking local j=-",
  "45 i truth=87 c=83 t=87 tracking local j=-",
  "46 f truth=89 c=89 t=- tracking local j=-",
  "47 i truth=91 c=89 t=91 tracking local j=-",
  "48 i truth=93 c=89 t=93 tracking local j=-",
  "49 i truth=95 c=89 t=95 tracking local j=-",
  "50 i truth=97 c=89 t=97 tracking local j=-",
  "51 i truth=99 c=89 t=99 tracking local j=-",
  "52 f truth=101 c=101 t=- tracking local j=-",
  "53 i truth=103 c=101 t=103 tracking local j=-",
  "54 i truth=105 c=101 t=105 tracking local j=-",
  "55 f truth=107 c=107 t=- tracking local j=-",
  "56 i truth=109 c=107 t=109 tracking local j=-",
  "57 i truth=111 c=107 t=111 tracking local j=-",
  "58 i truth=113 c=107 t=113 tracking local j=-",
  "59 f truth=115 c=115 t=- tracking local j=-",
  "60 i truth=117 c=115 t=117 tracking local j=-",
  "61 i truth=119 c=115 t=119 tracking local j=-",
  "62 i truth=121 c=115 t=121 tracking local j=-",
  "63 f truth=123 c=123 t=- tracking local j=-",
  "64 i truth=125 c=123 t=125 tracking local j=-",
  "65 i truth=127 c=123 t=127 tracking local j=-",
  "66 i truth=129 c=123 t=129 tracking local j=-",
  "67 i truth=131 c=123 t=131 tracking local j=-",
  "68 f truth=132 c=132 t=- tracking local j=-",
  "69 i truth=134 c=132 t=134 tracking local j=-",
  "70 i truth=136 c=132 t=135 tracking local j=-",
  "71 i truth=136 c=132 t=136 tracking local j=-",
  "72 i truth=138 c=132 t=138 tracking local j=-",
  "73 f truth=139 c=139 t=- tracking local j=-",
  "74 i truth=141 c=139 t=141 tracking local j=-",
  "75 i truth=143 c=139 t=143 tracking local j=-",
  "76 i truth=145 c=139 t=145 tracking local j=-",
  "77 f truth=146 c=146 t=- tracking local j=-",
  "78 i truth=148 c=146 t=148 tracking local j=-",
  "79 i truth=150 c=146 t=150 tracking local j=-",
  "80 i truth=152 c=146 t=152 tracking local j=-",
  "81 f truth=153 c=153 t=- tracking local j=-",
  "82 i truth=155 c=153 t=155 tracking local j=-",
  "83 i truth=157 c=153 t=157 tracking local j=-",
  "84 i truth=159 c=153 t=159 tracking local j=-",
  "85 f truth=160 c=160 t=- tracking local j=-",
  "86 i truth=162 c=160 t=162 tracking local j=-",
  "87 i truth=164 c=160 t=164 tracking local j=-",
  "88 f truth=166 c=166 t=- tracking local j=-",
  "89 i truth=168 c=166 t=168 tracking local j=-",
  "90 i truth=170 c=166 t=170 tracking local j=-",
  "91 i truth=172 c=166 t=172 tracking local j=-",
  "92 i truth=174 c=166 t=174 tracking local j=-",
  "93 f truth=175 c=175 t=- tracking local j=-",
  "94 i truth=177 c=175 t=177 tracking local j=-",
  "95 i truth=179 c=175 t=179 tracking local j=-",
  "96 i truth=181 c=175 t=181 tracking local j=-",
  "97 f truth=182 c=182 t=- tracking local j=-",
  "98 i truth=184 c=182 t=184 tracking local j=-",
  "99 i truth=186 c=182 t=186 tracking local j=-",
  "100 i truth=188 c=182 t=188 tracking local j=-",
  "101 i truth=190 c=182 t=190 tracking local j=-",
  "102 f truth=191 c=191 t=- tracking local j=-",
  "103 i truth=193 c=191 t=193 tracking local j=-",
  "104 i truth=195 c=191 t=195 tracking local j=-",
  "105 f truth=197 c=197 t=- tracking local j=-",
  "106 i truth=199 c=197 t=199 tracking local j=-",
  "107 i truth=201 c=197 t=201 tracking local j=-",
  "108 i truth=203 c=197 t=203 tracking local j=-",
  "109 i truth=205 c=197 t=205 tracking local j=-",
  "110 f truth=206 c=206 t=- tracking local j=-",
  "111 i truth=208 c=206 t=208 tracking local j=-",
  "112 i truth=210 c=206 t=210 tracking local j=-",
  "113 i truth=212 c=206 t=212 tracking local j=-",
  "114 i truth=214 c=206 t=214 tracking local j=-",
  "115 f truth=216 c=216 t=- tracking local j=-",
  "116 i truth=218 c=216 t=218 tracking local j=-",
  "117 i truth=220 c=216 t=220 tracking local j=-",
  "118 i truth=222 c=216 t=222 tracking local j=-",
  "119 i truth=224 c=216 t=224 tracking local j=-",
  "120 f truth=226 c=226 t=- tracking local j=-",
  "121 i truth=228 c=226 t=228 tracking local j=-",
  "122 i truth=230 c=226 t=230 tracking local j=-",
  "123 i truth=232 c=226 t=232 tracking local j=-",
  "124 i truth=234 c=226 t=234 tracking local j=-",
  "125 i truth=236 c=226 t=236 tracking local j=-",
  "126 f truth=238 c=238 t=- tracking local j=-",
  "127 i truth=240 c=238 t=240 tracking local j=-",
  "128 i truth=242 c=238 t=242 tracking local j=-",
  "129 i truth=244 c=238 t=244 tracking local j=-",
  "130 i truth=246 c=238 t=246 tracking local j=-",
  "131 i truth=248 c=238 t=248 tracking local j=-",
  "132 f truth=250 c=250 t=- tracking local j=-",
  "133 i truth=252 c=250 t=252 tracking local j=-",
  "134 i truth=254 c=250 t=254 tracking local j=-",
  "135 i truth=256 c=250 t=256 tracking local j=-",
  "136 f truth=256 c=256 t=- tracking local j=-",
]
`;

exports[`full-script baseline: talk > tracks "long pause" the same way 1`] = `
[
  "0 i truth=1 c=- t=1 tracking - j=-",
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 f truth=5 c=5 t=- tracking local j=-",
  "3 i truth=7 c=5 t=7 tracking local j=-",
  "4 i truth=9 c=5 t=9 tracking local j=-",
  "5 i truth=11 c=5 t=11 tracking local j=-",
  "6 i truth=13 c=5 t=13 tracking local j=-",
  "7 i truth=15 c=5 t=15 tracking local j=-",
  "8 f truth=16 c=16 t=- tracking local j=-",
  "9 i truth=18 c=16 t=18 tracking local j=-",
  "10 i truth=20 c=16 t=20 tracking local j=-",
  "11 i truth=22 c=16 t=22 tracking local j=-",
  "12 i truth=24 c=16 t=24 tracking local j=-",
  "13 f truth=26 c=26 t=- tracking local j=-",
  "14 i truth=28 c=26 t=28 tracking local j=-",
  "15 i truth=30 c=26 t=30 tracking local j=-",
  "16 i truth=32 c=26 t=32 tracking local j=-",
  "17 i truth=34 c=26 t=34 tracking local j=-",
  "18 i truth=36 c=26 t=36 tracking local j=-",
  "19 f truth=38 c=38 t=- tracking local j=-",
  "20 i truth=40 c=38 t=40 tracking local j=-",
  "21 i truth=42 c=38 t=42 tracking local j=-",
  "22 i truth=44 c=38 t=44 tracking local j=-",
  "23 f truth=45 c=45 t=- tracking local j=-",
  "24 i truth=47 c=45 t=47 tracking local j=-",
  "25 i truth=49 c=45 t=49 tracking local j=-",
  "26 i truth=51 c=45 t=51 tracking local j=-",
  "27 f truth=53 c=53 t=- tracking local j=-",
  "28 i truth=55 c=53 t=55 tracking local j=-",
  "29 i truth=57 c=53 t=57 tracking local j=-",
  "30 i truth=59 c=53 t=59 tracking local j=-",
  "31 i truth=61 c=53 t=61 tracking local j=-",
  "32 i truth=63 c=53 t=63 tracking local j=-",
  "33 f truth=64 c=64 t=- tracking local j=-",
  "34 i truth=66 c=64 t=66 tracking local j=-",
  "35 i truth=68 c=64 t=68 tracking local j=-",
  "36 i truth=70 c=64 t=70 tracking local j=-",
  "37 f truth=71 c=71 t=- tracking local j=-",
  "38 i truth=73 c=71 t=73 tracking local j=-",
  "39 i truth=75 c=71 t=75 tracking local j=-",
  "40 i truth=77 c=71 t=77 tracking local j=-",
  "41 i truth=79 c=71 t=79 tracking local j=-",
  "42 i truth=81 c=71 t=81 tracking local j=-",
  "43 f truth=83 c=83 t=- tracking local j=-",
  "44 i truth=85 c=83 t=85 tracking local j=-",
  "45 i truth=87 c=83 t=87 tracking local j=-",
  "46 f truth=89 c=89 t=- tracking local j=-",
  "47 i truth=91 c=89 t=91 tracking local j=-",
  "48 i truth=93 c=89 t=93 tracking local j=-",
  "49 i truth=95 c=89 t=95 tracking local j=-",
  "50 i truth=97 c=89 t=97 tracking local j=-",
  "51 i truth=99 c=89 t=99 tracking local j=-",
  "52 f truth=101 c=101 t=- tracking local j=-",
  "53 i truth=103 c=101 t=103 tracking local j=-",
  "54 i truth=105 c=101 t=105 tracking local j=-",
  "55 f truth=107 c=107 t=- tracking local j=-",
  "56 i truth=109 c=107 t=109 tracking local j=-",
  "57 i truth=111 c=107 t=111 tracking local j=-",
  "58 i truth=113 c=107 t=113 tracking local j=-",
  "59 f truth=115 c=115 t=- tracking local j=-",
  "60 i truth=117 c=115 t=117 tracking local j=-",
  "61 i truth=119 c=115 t=119 tracking local j=-",
  "62 i truth=121 c=115 t=121 tracking local j=-",
  "63 f truth=123 c=123 t=- tracking local j=-",
  "64 i truth=125 c=123 t=125 tracking local j=-",
  "65 i truth=127 c=123 t=127 tracking local j=-",
  "66 i truth=129 c=123 t=129 tracking local j=-",
  "67 i truth=131 c=123 t=131 tracking local j=-",
  "68 f truth=132 c=132 t=- tracking local j=-",
  "69 i truth=134 c=132 t=134 tracking local j=-",
  "70 i truth=136 c=132 t=135 tracking local j=-",
  "71 i truth=136 c=132 t=136 tracking local j=-",
  "72 i truth=138 c=132 t=138 tracking local j=-",
  "73 f truth=139 c=139 t=- tracking local j=-",
  "74 i truth=141 c=139 t=141 tracking local j=-",
  "75 i truth=143 c=139 t=143 tracking local j=-",
  "76 i truth=145 c=139 t=145 tracking local j=-",
  "77 f truth=146 c=146 t=- tracking local j=-",
  "78 i truth=148 c=146 t=148 tracking local j=-",
  "79 i truth=150 c=146 t=150 tracking local j=-",
  "80 i truth=152 c=146 t=152 tracking local j=-",
  "81 f truth=153 c=153 t=- tracking local j=-",
  "82 i truth=155 c=153 t=155 tracking local j=-",
  "83 i truth=157 c=153 t=157 tracking local j=-",
  "84 i truth=159 c=153 t=159 tracking local j=-",
  "85 f truth=160 c=160 t=- tracking local j=-",
  "86 i truth=162 c=160 t=162 tracking local j=-",
  "87 i truth=164 c=160 t=164 tracking local j=-",
  "88 f truth=166 c=166 t=- tracking local j=-",
  "89 i truth=168 c=166 t=168 tracking local j=-",
  "90 i truth=170 c=166 t=170 tracking local j=-",
  "91 i truth=172 c=166 t=172 tracking local j=-",
  "92 i truth=174 c=166 t=174 tracking local j=-",
  "93 f truth=175 c=175 t=- tracking local j=-",
  "94 i truth=177 c=175 t=177 tracking local j=-",
  "95 i truth=179 c=175 t=179 tracking local j=-",
  "96 i truth=181 c=175 t=181 tracking local j=-",
  "97 f truth=182 c=182 t=- tracking local j=-",
  "98 i truth=184 c=182 t=184 tracking local j=-",
  "99 i truth=186 c=182 t=186 tracking local j=-",
  "100 i truth=188 c=182 t=188 tracking local j=-",
  "101 i truth=190 c=182 t=190 tracking local j=-",
  "102 f truth=191 c=191 t=- tracking local j=-",
  "103 i truth=193 c=191 t=193 tracking local j=-",
  "104 f truth=194 c=194 t=- tracking local j=-",
  "105 i truth=196 c=194 t=196 tracking local j=-",
  "106 i truth=198 c=194 t=198 tracking local j=-",
  "107 i truth=200 c=194 t=200 tracking local j=-",
  "108 i truth=202 c=194 t=202 tracking local j=-",
  "109 f truth=203 c=203 t=- tracking local j=-",
  "110 i truth=205 c=203 t=205 tracking local j=-",
  "111 i truth=207 c=203 t=207 tracking local j=-",
  "112 i truth=209 c=203 t=209 tracking local j=-",
  "113 i truth=211 c=203 t=211 tracking local j=-",
  "114 f truth=213 c=213 t=- tracking local j=-",
  "115 i truth=215 c=213 t=215 tracking local j=-",
  "116 i truth=217 c=213 t=217 tracking local j=-",
  "117 i truth=219 c=213 t=219 tracking local j=-",
  "118 i truth=221 c=213 t=221 tracking local j=-",
  "119 i truth=223 c=213 t=223 tracking local j=-",
  "120 f truth=225 c=225 t=- tracking local j=-",
  "121 i truth=227 c=225 t=227 tracking local j=-",
  "122 i truth=229 c=225 t=229 tracking local j=-",
  "123 i truth=231 c=225 t=231 tracking local j=-",
  "124 i truth=233 c=225 t=233 tracking local j=-",
  "125 i truth=235 c=225 t=235 tracking local j=-",
  "126 f truth=237 c=237 t=- tracking local j=-",
  "127 i truth=239 c=237 t=239 tracking local j=-",
  "128 i truth=241 c=237 t=241 tracking local j=-",
  "129 i truth=243 c=237 t=243 tracking local j=-",
  "130 i truth=245 c=237 t=245 tracking local j=-",
  "131 i truth=247 c=237 t=247 tracking local j=-",
  "132 f truth=249 c=249 t=- tracking local j=-",
  "133 i truth=251 c=249 t=251 tracking local j=-",
  "134 i truth=253 c=249 t=253 tracking local j=-",
  "135 i truth=255 c=249 t=255 tracking local j=-",
  "136 f truth=256 c=256 t=- tracking local j=-",
]
`;

exports[`full-script baseline: talk > tracks "noisy read, seed 1" the same way 1`] = `
[
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 i truth=5 c=- t=5 tracking - j=-",
  "3 i truth=7 c=- t=7 tracking - j=-",
  "4 f truth=8 c=8 t=- tracking local j=-",
  "5 i truth=9 c=8 t=9 tracking local j=-",
  "6 i truth=11 c=8 t=11 tracking local j=-",
  "7 f truth=13 c=13 t=- tracking local j=-",
  "8 i truth=15 c=13 t=15 tracking local j=-",
  "9 i truth=17 c=13 t=17 tracking local j=-",
  "10 i truth=19 c=13 t=18 tracking local j=-",
  "11 f truth=21 c=21 t=- tracking local j=-",
  "13 i truth=24 c=21 t=23 tracking local j=-",
  "14 i truth=26 c=21 t=25 tracking local j=-",
  "15 i truth=28 c=21 t=27 tracking local j=-",
  "16 i truth=30 c=21 t=28 tracking local j=-",
  "17 f truth=32 c=32 t=- tracking local j=-",
  "18 i truth=34 c=32 t=34 tracking local j=-",
  "19 i truth=36 c=32 t=35 tracking local j=-",
  "20 i truth=38 c=32 t=37 tracking local j=-",
  "21 f truth=39 c=39 t=- tracking local j=-",
  "22 i truth=41 c=39 t=41 tracking local j=-",
  "23 i truth=43 c=39 t=43 tracking local j=-",
  "24 i truth=45 c=39 t=44 tracking local j=-",
  "25 f truth=46 c=46 t=- tracking local j=-",
  "26 i truth=48 c=46 t=48 tracking local j=-",
  "27 i truth=50 c=46 t=50 tracking local j=-",
  "28 i truth=51 c=46 t=51 tracking local j=-",
  "29 i truth=53 c=46 t=52 tracking local j=-",
  "30 f truth=54 c=54 t=- tracking local j=-",
  "31 i truth=56 c=54 t=56 tracking local j=-",
  "32 i truth=58 c=54 t=58 tracking local j=-",
  "33 i truth=60 c=54 t=59 tracking local j=-",
  "34 i truth=62 c=54 t=62 tracking local j=-",
  "35 f truth=63 c=63 t=- tracking local j=-",
  "36 i truth=65 c=63 t=65 tracking local j=-",
  "37 i truth=66 c=63 t=66 tracking local j=-",
  "38 i truth=68 c=63 t=68 tracking local j=-",
  "39 i truth=70 c=63 t=70 tracking local j=-",
  "40 f truth=72 c=72 t=- tracking local j=-",
  "41 i truth=74 c=72 t=74 tracking local j=-",
  "42 i truth=75 c=72 t=75 tracking local j=-",
  "43 i truth=77 c=72 t=77 tracking local j=-",
  "44 i truth=79 c=72 t=79 tracking local j=-",
  "45 f truth=80 c=80 t=- tracking local j=-",
  "46 i truth=82 c=80 t=81 tracking local j=-",
  "47 i truth=84 c=80 t=84 tracking local j=-",
  "48 i truth=85 c=80 t=85 tracking local j=-",
  "49 i truth=87 c=80 t=86 tracking local j=-",
  "50 i truth=89 c=80 t=89 tracking local j=-",
  "51 f truth=90 c=90 t=- tracking local j=-",
  "52 i truth=92 c=90 t=91 tracking local j=-",
  "53 i truth=94 c=90 t=94 tracking local j=-",
  "54 i truth=96 c=90 t=96 tracking local j=-",
  "56 i truth=99 c=90 t=99 tracking local j=-",
  "57 f truth=100 c=99 t=- tracking local j=-",
  "58 i truth=102 c=99 t=102 tracking local j=-",
  "59 i truth=103 c=99 t=103 tracking local j=-",
  "60 i truth=104 c=99 t=104 tracking local j=-",
  "61 f truth=105 c=105 t=- tracking local j=-",
  "62 i truth=107 c=105 t=107 tracking local j=-",
  "63 i truth=108 c=105 t=108 tracking local j=-",
  "64 f truth=110 c=110 t=- tracking local j=-",
  "65 i truth=111 c=110 t=111 tracking local j=-",
  "66 i truth=113 c=110 t=113 tracking local j=-",
  "67 i truth=115 c=110 t=115 tracking local j=-",
  "68 i truth=116 c=110 t=116 tracking local j=-",
  "69 f truth=118 c=118 t=- tracking local j=-",
  "70 i truth=120 c=118 t=120 tracking local j=-",
  "71 i truth=122 c=118 t=121 tracking local j=-",
  "72 i truth=124 c=118 t=124 tracking local j=-",
  "73 i truth=126 c=118 t=126 tracking local j=-",
  "74 i truth=127 c=118 t=127 tracking local j=-",
  "75 f truth=129 c=129 t=- tracking local j=-",
  "76 i truth=131 c=129 t=131 tracking local j=-",
  "77 i truth=133 c=129 t=132 tracking local j=-",
  "78 i truth=135 c=129 t=134 tracking local j=-",
  "79 f truth=136 c=135 t=- tracking local j=-",
  "81 i truth=138 c=135 t=138 tracking local j=-",
  "82 i truth=140 c=135 t=139 tracking local j=-",
  "83 f truth=142 c=142 t=- tracking local j=-",
  "85 i truth=145 c=142 t=145 tracking local j=-",
  "86 i truth=147 c=142 t=147 tracking local j=-",
  "87 f truth=149 c=149 t=- tracking local j=-",
  "88 i truth=151 c=149 t=151 tracking local j=-",
  "89 i truth=153 c=149 t=153 tracking local j=-",
  "90 i truth=155 c=149 t=154 tracking local j=-",
  "92 i truth=159 c=149 t=159 tracking local j=-",
  "93 f truth=161 c=161 t=- tracking local j=-",
  "94 i truth=163 c=161 t=162 tracking local j=-",
  "95 i truth=164 c=161 t=164 tracking local j=-",
  "96 i truth=166 c=161 t=166 tracking local j=-",
  "97 i truth=168 c=161 t=167 tracking local j=-",
  "98 f truth=169 c=169 t=- tracking local j=-",
  "99 i truth=170 c=169 t=170 tracking local j=-",
  "100 i truth=172 c=169 t=172 tracking local j=-",
  "102 f truth=174 c=174 t=- tracking local j=-",
  "103 i truth=176 c=174 t=176 tracking local j=-",
  "105 f truth=180 c=180 t=- tracking local j=-",
  "106 i truth=182 c=180 t=181 tracking local j=-",
  "107 i truth=184 c=180 t=184 tracking local j=-",
  "108 i truth=186 c=180 t=185 tracking local j=-",
  "109 i truth=188 c=180 t=188 tracking local j=-",
  "110 i truth=190 c=180 t=190 tracking local j=-",
  "111 f truth=191 c=191 t=- tracking local j=-",
  "112 i truth=193 c=191 t=192 tracking local j=-",
  "113 i truth=195 c=191 t=194 tracking local j=-",
  "114 i truth=197 c=191 t=196 tracking local j=-",
  "115 f truth=198 c=198 t=- tracking local j=-",
  "116 i truth=200 c=198 t=200 tracking local j=-",
  "117 i truth=202 c=198 t=202 tracking local j=-",
  "118 i truth=204 c=198 t=204 tracking local j=-",
  "119 f truth=205 c=205 t=- tracking local j=-",
  "120 i truth=207 c=205 t=207 tracking local j=-",
  "121 i truth=209 c=205 t=209 tracking local j=-",
  "122 i truth=211 c=205 t=210 tracking local j=-",
  "123 i truth=212 c=205 t=212 tracking local j=-",
  "124 f truth=214 c=214 t=- tracking local j=-",
  "125 i truth=215 c=214 t=215 tracking local j=-",
  "126 i truth=217 c=214 t=217 tracking local j=-",
  "127 i truth=219 c=214 t=219 tracking local j=-",
  "128 f truth=220 c=220 t=- tracking local j=-",
  "129 i truth=222 c=220 t=221 tracking local j=-",
  "130 i truth=224 c=220 t=224 tracking local j=-",
  "131 i truth=226 c=220 t=226 tracking local j=-",
  "132 i truth=227 c=220 t=227 tracking local j=-",
  "133 i truth=229 c=220 t=228 tracking local j=-",
  "134 f truth=230 c=230 t=- tracking local j=-",
  "136 i truth=232 c=230 t=232 tracking local j=-",
  "137 f truth=234 c=234 t=- tracking local j=-",
  "139 i truth=237 c=234 t=237 tracking local j=-",
  "140 i truth=239 c=234 t=239 tracking local j=-",
  "141 f truth=241 c=241 t=- tracking local j=-",
  "142 i truth=243 c=241 t=243 tracking local j=-",
  "143 i truth=245 c=241 t=245 tracking local j=-",
  "144 i truth=247 c=241 t=246 tracking local j=-",
  "145 i truth=248 c=241 t=248 tracking local j=-",
  "146 i truth=250 c=241 t=250 tracking local j=-",
  "147 f truth=251 c=251 t=- tracking local j=-",
  "148 i truth=252 c=251 t=252 tracking local j=-",
  "149 i truth=254 c=251 t=254 tracking local j=-",
  "150 i truth=256 c=251 t=256 tracking local j=-",
  "151 f truth=256 c=256 t=- tracking local j=-",
]
`;

exports[`full-script baseline: talk > tracks "noisy read, seed 2" the same way 1`] = `
[
  "1 i truth=3 c=- t=2 tracking - j=-",
  "2 i truth=5 c=- t=5 tracking - j=-",
  "3 f truth=7 c=7 t=- tracking local j=-",
  "4 i truth=9 c=7 t=8 tracking local j=-",
  "5 i truth=10 c=7 t=10 tracking local j=-",
  "6 i truth=12 c=7 t=11 tracking local j=-",
  "7 i truth=14 c=7 t=13 tracking local j=-",
  "9 f truth=16 c=13 t=- tracking local j=-",
  "11 i truth=19 c=13 t=19 tracking local j=-",
  "12 i truth=21 c=13 t=20 tracking local j=-",
  "13 i truth=23 c=13 t=22 tracking local j=-",
  "14 i truth=25 c=13 t=25 tracking local j=-",
  "15 f truth=27 c=26 t=- tracking local j=-",
  "16 i truth=29 c=26 t=29 tracking local j=-",
  "17 i truth=31 c=26 t=31 tracking local j=-",
  "18 f truth=33 c=33 t=- tracking local j=-",
  "19 i truth=35 c=33 t=34 tracking local j=-",
  "20 i truth=37 c=33 t=37 tracking local j=-",
  "21 i truth=39 c=33 t=39 tracking local j=-",
  "22 i truth=41 c=33 t=41 tracking local j=-",
  "23 f truth=41 c=41 t=- tracking local j=-",
  "24 i truth=43 c=41 t=42 tracking local j=-",
  "25 i truth=45 c=41 t=45 tracking local j=-",
  "26 f truth=47 c=47 t=- tracking local j=-",
  "27 i truth=48 c=47 t=48 tracking local j=-",
  "28 i truth=50 c=47 t=50 tracking local j=-",
  "29 f truth=51 c=51 t=- tracking local j=-",
  "30 i truth=53 c=51 t=53 tracking local j=-",
  "31 i truth=55 c=51 t=54 tracking local j=-",
  "32 i truth=57 c=51 t=56 tracking local j=-",
  "33 f truth=58 c=58 t=- tracking local j=-",
  "34 i truth=60 c=58 t=59 tracking local j=-",
  "35 i truth=62 c=58 t=62 tracking local j=-",
  "36 i truth=64 c=58 t=64 tracking local j=-",
  "37 f truth=65 c=65 t=- tracking local j=-",
  "38 i truth=67 c=65 t=67 tracking local j=-",
  "39 i truth=69 c=65 t=69 tracking local j=-",
  "40 i truth=71 c=65 t=71 tracking local j=-",
  "41 i truth=73 c=65 t=73 tracking local j=-",
  "42 i truth=75 c=65 t=75 tracking local j=-",
  "43 f truth=77 c=76 t=- tracking local j=-",
  "44 i truth=79 c=76 t=79 tracking local j=-",
  "45 i truth=81 c=76 t=80 tracking local j=-",
  "46 i truth=83 c=76 t=81 tracking local j=-",
  "47 f truth=85 c=85 t=- tracking local j=-",
  "48 i truth=86 c=85 t=86 tracking local j=-",
  "49 i truth=88 c=85 t=87 tracking local j=-",
  "50 i truth=90 c=85 t=89 tracking local j=-",
  "51 f truth=91 c=91 t=- tracking local j=-",
  "52 i truth=93 c=91 t=92 tracking local j=-",
  "53 i truth=95 c=91 t=94 tracking local j=-",
  "54 i truth=96 c=91 t=95 tracking local j=-",
  "55 f truth=97 c=97 t=- tracking local j=-",
  "56 i truth=99 c=97 t=99 tracking local j=-",
  "57 i truth=101 c=97 t=100 tracking local j=-",
  "58 i truth=103 c=97 t=103 tracking local j=-",
  "59 i truth=104 c=97 t=104 tracking local j=-",
  "60 f truth=106 c=105 t=- tracking local j=-",
  "61 i truth=108 c=105 t=107 tracking local j=-",
  "62 i truth=110 c=105 t=110 tracking local j=-",
  "63 i truth=112 c=105 t=112 tracking local j=-",
  "64 i truth=114 c=105 t=113 tracking local j=-",
  "65 f truth=115 c=115 t=- tracking local j=-",
  "66 i truth=117 c=115 t=116 tracking local j=-",
  "67 i truth=119 c=115 t=118 tracking local j=-",
  "68 f truth=121 c=121 t=- tracking local j=-",
  "69 i truth=123 c=121 t=123 tracking local j=-",
  "70 i truth=125 c=121 t=125 tracking local j=-",
  "71 i truth=127 c=121 t=126 tracking local j=-",
  "72 i truth=129 c=121 t=129 tracking local j=-",
  "73 f truth=131 c=130 t=- tracking local j=-",
  "74 i truth=133 c=130 t=133 tracking local j=-",
  "75 i truth=135 c=130 t=134 tracking local j=-",
  "76 f truth=136 c=135 t=- tracking local j=-",
  "77 i truth=136 c=135 t=136 tracking local j=-",
  "78 i truth=138 c=135 t=138 tracking local j=-",
  "79 i truth=139 c=135 t=139 tracking local j=-",
  "80 i truth=141 c=135 t=141 tracking local j=-",
  "81 i truth=143 c=135 t=143 tracking local j=-",
  "82 f truth=144 c=144 t=- tracking local j=-",
  "83 i truth=146 c=144 t=146 tracking local j=-",
  "84 i truth=148 c=144 t=148 tracking local j=-",
  "85 f truth=150 c=150 t=- tracking local j=-",
  "86 i truth=152 c=150 t=152 tracking local j=-",
  "87 i truth=153 c=150 t=153 tracking local j=-",
  "88 f truth=155 c=155 t=- tracking local j=-",
  "89 i truth=157 c=155 t=157 tracking local j=-",
  "90 i truth=158 c=155 t=158 tracking local j=-",
  "91 i truth=160 c=155 t=159 tracking local j=-",
  "92 i truth=162 c=155 t=161 tracking local j=-",
  "93 i truth=164 c=155 t=164 tracking local j=-",
  "94 f truth=166 c=166 t=- tracking local j=-",
  "95 i truth=168 c=166 t=168 tracking local j=-",
  "96 i truth=170 c=166 t=170 tracking local j=-",
  "97 i truth=171 c=166 t=171 tracking local j=-",
  "98 i truth=172 c=166 t=172 tracking local j=-",
  "99 f truth=173 c=173 t=- tracking local j=-",
  "100 i truth=174 c=173 t=174 tracking local j=-",
  "101 i truth=176 c=173 t=176 tracking local j=-",
  "102 i truth=178 c=173 t=178 tracking local j=-",
  "103 i truth=180 c=173 t=179 tracking local j=-",
  "104 i truth=181 c=173 t=181 tracking local j=-",
  "105 f truth=182 c=181 t=- tracking local j=-",
  "106 i truth=184 c=181 t=184 tracking local j=-",
  "107 i truth=185 c=181 t=185 tracking local j=-",
  "108 i truth=187 c=181 t=187 tracking local j=-",
  "109 f truth=189 c=189 t=- tracking local j=-",
  "110 i truth=190 c=189 t=190 tracking local j=-",
  "111 i truth=192 c=189 t=192 tracking local j=-",
  "112 i truth=194 c=189 t=194 tracking local j=-",
  "113 f truth=196 c=196 t=- tracking local j=-",
  "114 i truth=198 c=196 t=198 tracking local j=-",
  "115 i truth=200 c=196 t=199 tracking local j=-",
  "116 i truth=202 c=196 t=201 tracking local j=-",
  "117 i truth=204 c=196 t=204 tracking local j=-",
  "118 f truth=205 c=205 t=- tracking local j=-",
  "119 i truth=206 c=205 t=206 tracking local j=-",
  "120 i truth=208 c=205 t=207 tracking local j=-",
  "121 i truth=210 c=205 t=210 tracking local j=-",
  "123 f truth=213 c=213 t=- tracking local j=-",
  "124 i truth=215 c=213 t=215 tracking local j=-",
  "125 i truth=217 c=213 t=217 tracking local j=-",
  "126 f truth=219 c=219 t=- tracking local j=-",
  "127 i truth=221 c=219 t=220 tracking local j=-",
  "128 i truth=222 c=219 t=222 tracking local j=-",
  "129 i truth=224 c=219 t=224 tracking local j=-",
  "130 f truth=226 c=226 t=- tracking local j=-",
  "131 i truth=227 c=226 t=227 tracking local j=-",
  "132 i truth=228 c=226 t=228 tracking local j=-",
  "133 i truth=230 c=226 t=230 tracking local j=-",
  "134 f truth=232 c=232 t=- tracking local j=-",
  "135 i truth=234 c=232 t=234 tracking local j=-",
  "136 i truth=236 c=232 t=236 tracking local j=-",
  "137 i truth=238 c=232 t=238 tracking local j=-",
  "138 i truth=239 c=232 t=239 tracking local j=-",
  "139 i truth=241 c=232 t=241 tracking local j=-",
  "140 f truth=243 c=243 t=- tracking local j=-",
  "141 i truth=244 c=243 t=244 tracking local j=-",
  "142 i truth=246 c=243 t=245 tracking local j=-",
  "143 i truth=248 c=243 t=248 tracking local j=-",
  "144 i truth=250 c=243 t=250 tracking local j=-",
  "145 f truth=251 c=251 t=- tracking local j=-",
  "146 i truth=252 c=251 t=252 tracking local j=-",
  "147 i truth=254 c=251 t=254 tracking local j=-",
  "148 i truth=256 c=251 t=256 tracking local j=-",
  "149 f truth=256 c=256 t=- tracking local j=-",
]
`;

exports[`full-script baseline: talk > tracks "noisy read, seed 3" the same way 1`] = `
[
  "1 i truth=2 c=- t=2 tracking - j=-",
  "2 i truth=4 c=- t=4 tracking - j=-",
  "3 f truth=5 c=5 t=- tracking local j=-",
  "4 i truth=7 c=5 t=7 tracking local j=-",
  "5 i truth=9 c=5 t=9 tracking local j=-",
  "6 i truth=11 c=5 t=11 tracking local j=-",
  "7 i truth=13 c=5 t=13 tracking local j=-",
  "8 f truth=14 c=14 t=- tracking local j=-",
  "9 i truth=16 c=14 t=15 tracking local j=-",
  "10 i truth=18 c=14 t=18 tracking local j=-",
  "11 i truth=19 c=14 t=19 tracking local j=-",
  "12 i truth=21 c=14 t=21 tracking local j=-",
  "13 f truth=23 c=23 t=- tracking local j=-",
  "14 i truth=25 c=23 t=24 tracking local j=-",
  "15 i truth=27 c=23 t=26 tracking local j=-",
  "16 i truth=28 c=23 t=28 tracking local j=-",
  "17 f truth=30 c=30 t=- tracking local j=-",
  "18 i truth=32 c=30 t=32 tracking local j=-",
  "19 i truth=34 c=30 t=34 tracking local j=-",
  "20 i truth=36 c=30 t=35 tracking local j=-",
  "21 i truth=37 c=30 t=36 tracking local j=-",
  "22 i truth=39 c=30 t=39 tracking local j=-",
  "23 f truth=40 c=40 t=- tracking local j=-",
  "24 i truth=42 c=40 t=42 tracking local j=-",
  "25 i truth=44 c=40 t=44 tracking local j=-",
  "26 i truth=46 c=40 t=45 tracking local j=-",
  "27 i truth=47 c=40 t=47 tracking local j=-",
  "28 i truth=49 c=40 t=48 tracking local j=-",
  "29 f truth=49 c=49 t=- tracking local j=-",
  "30 i truth=51 c=49 t=51 tracking local j=-",
  "31 i truth=52 c=49 t=52 tracking local j=-",
  "32 i truth=54 c=49 t=54 tracking local j=-",
  "33 f truth=55 c=55 t=- tracking local j=-",
  "34 i truth=57 c=55 t=57 tracking local j=-",
  "35 i truth=59 c=55 t=59 tracking local j=-",
  "36 i truth=61 c=55 t=61 tracking local j=-",
  "37 i truth=63 c=55 t=63 tracking local j=-",
  "38 f truth=64 c=64 t=- tracking local j=-",
  "39 i truth=65 c=64 t=65 tracking local j=-",
  "40 i truth=67 c=64 t=67 tracking local j=-",
  "41 i truth=68 c=64 t=68 tracking local j=-",
  "42 f truth=69 c=69 t=- tracking local j=-",
  "43 i truth=71 c=69 t=70 tracking local j=-",
  "44 i truth=73 c=69 t=73 tracking local j=-",
  "45 i truth=75 c=69 t=75 tracking local j=-",
  "46 i truth=77 c=69 t=76 tracking local j=-",
  "47 i truth=79 c=69 t=79 tracking local j=-",
  "48 f truth=79 c=79 t=- tracking local j=-",
  "49 i truth=81 c=79 t=80 tracking local j=-",
  "50 i truth=83 c=79 t=82 tracking local j=-",
  "51 i truth=84 c=79 t=83 tracking local j=-",
  "52 f truth=86 c=86 t=- tracking local j=-",
  "53 i truth=88 c=86 t=88 tracking local j=-",
  "54 i truth=90 c=86 t=89 tracking local j=-",
  "55 i truth=92 c=86 t=91 tracking local j=-",
  "56 f truth=93 c=93 t=- tracking local j=-",
  "57 i truth=95 c=93 t=95 tracking local j=-",
  "58 i truth=97 c=93 t=97 tracking local j=-",
  "59 i truth=99 c=93 t=98 tracking local j=-",
  "60 i truth=101 c=93 t=100 tracking local j=-",
  "61 i truth=103 c=93 t=102 tracking local j=-",
  "62 f truth=105 c=105 t=- tracking local j=-",
  "63 i truth=107 c=105 t=107 tracking local j=-",
  "64 i truth=108 c=105 t=108 tracking local j=-",
  "65 i truth=110 c=105 t=110 tracking local j=-",
  "66 i truth=112 c=105 t=112 tracking local j=-",
  "67 f truth=114 c=113 t=- tracking local j=-",
  "68 i truth=116 c=113 t=116 tracking local j=-",
  "69 i truth=117 c=113 t=117 tracking local j=-",
  "70 f truth=119 c=119 t=- tracking local j=-",
  "71 i truth=121 c=119 t=121 tracking local j=-",
  "72 i truth=123 c=119 t=123 tracking local j=-",
  "73 i truth=124 c=119 t=124 tracking local j=-",
  "74 i truth=126 c=119 t=126 tracking local j=-",
  "75 f truth=127 c=127 t=- tracking local j=-",
  "76 i truth=129 c=127 t=128 tracking local j=-",
  "77 i truth=131 c=127 t=131 tracking local j=-",
  "78 i truth=133 c=127 t=132 tracking local j=-",
  "79 i truth=134 c=127 t=134 tracking local j=-",
  "80 f truth=135 c=135 t=- tracking local j=-",
  "82 i truth=137 c=135 t=137 tracking local j=-",
  "83 i truth=139 c=135 t=139 tracking local j=-",
  "84 i truth=141 c=135 t=141 tracking local j=-",
  "85 i truth=143 c=135 t=143 tracking local j=-",
  "86 f truth=145 c=144 t=- tracking local j=-",
  "87 i truth=147 c=144 t=147 tracking local j=-",
  "88 i truth=149 c=144 t=149 tracking local j=-",
  "89 i truth=151 c=144 t=150 tracking local j=-",
  "90 i truth=153 c=144 t=153 tracking local j=-",
  "91 f truth=155 c=155 t=- tracking local j=-",
  "92 i truth=157 c=155 t=157 tracking local j=-",
  "93 i truth=159 c=155 t=159 tracking local j=-",
  "95 i truth=163 c=155 t=162 tracking local j=-",
  "97 f truth=166 c=166 t=- tracking local j=-",
  "98 i truth=168 c=166 t=168 tracking local j=-",
  "100 f truth=171 c=171 t=- tracking local j=-",
  "101 i truth=172 c=171 t=172 tracking local j=-",
  "102 i truth=174 c=171 t=174 tracking local j=-",
  "103 f truth=176 c=176 t=- tracking local j=-",
  "104 i truth=178 c=176 t=178 tracking local j=-",
  "105 i truth=180 c=176 t=180 tracking local j=-",
  "106 i truth=182 c=176 t=181 tracking local j=-",
  "107 i truth=183 c=176 t=183 tracking local j=-",
  "108 f truth=184 c=184 t=- tracking local j=-",
  "109 i truth=186 c=184 t=186 tracking local j=-",
  "110 i truth=188 c=184 t=187 tracking local j=-",
  "111 i truth=190 c=184 t=190 tracking local j=-",
  "112 f truth=192 c=192 t=- tracking local j=-",
  "113 i truth=193 c=192 t=193 tracking local j=-",
  "114 i truth=195 c=192 t=195 tracking local j=-",
  "115 i truth=197 c=192 t=196 tracking local j=-",
  "116 i truth=198 c=192 t=198 tracking local j=-",
  "117 i truth=200 c=192 t=199 tracking local j=-",
  "118 f truth=201 c=201 t=- tracking local j=-",
  "119 i truth=203 c=201 t=203 tracking local j=-",
  "120 i truth=205 c=201 t=205 tracking local j=-",
  "121 i truth=207 c=201 t=206 tracking local j=-",
  "122 f truth=209 c=209 t=- tracking local j=-",
  "123 i truth=211 c=209 t=211 tracking local j=-",
  "124 i truth=213 c=209 t=213 tracking local j=-",
  "125 i truth=215 c=209 t=214 tracking local j=-",
  "126 i truth=216 c=209 t=216 tracking local j=-",
  "127 f truth=217 c=217 t=- tracking local j=-",
  "128 i truth=219 c=217 t=219 tracking local j=-",
  "129 i truth=221 c=217 t=221 tracking local j=-",
  "130 i truth=223 c=217 t=223 tracking local j=-",
  "131 i truth=225 c=217 t=224 tracking local j=-",
  "132 i truth=227 c=217 t=226 tracking local j=-",
  "133 f truth=229 c=229 t=- tracking local j=-",
  "134 i truth=231 c=229 t=231 tracking local j=-",
  "135 i truth=233 c=229 t=233 tracking local j=-",
  "136 i truth=235 c=229 t=235 tracking local j=-",
  "137 i truth=237 c=229 t=237 tracking local j=-",
  "138 f truth=238 c=238 t=- tracking local j=-",
  "140 i truth=241 c=238 t=241 tracking local j=-",
  "141 i truth=243 c=238 t=243 tracking local j=-",
  "142 i truth=245 c=238 t=244 tracking local j=-",
  "143 i truth=247 c=238 t=247 tracking local j=-",
  "144 f truth=248 c=248 t=- tracking local j=-",
  "145 i truth=250 c=248 t=249 tracking local j=-",
  "146 i truth=252 c=248 t=251 tracking local j=-",
  "147 i truth=254 c=248 t=254 tracking local j=-",
  "148 i truth=256 c=248 t=256 tracking local j=-",
  "149 f truth=256 c=256 t=- tracking local j=-",
]
`;

exports[`full-script baseline: talk > tracks "re-reads a sentence" the same way 1`] = `
[
  "0 i truth=1 c=- t=1 tracking - j=-",
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 i truth=5 c=- t=5 tracking - j=-",
  "3 f truth=6 c=6 t=- tracking local j=-",
  "4 i truth=8 c=6 t=8 tracking local j=-",
  "5 i truth=10 c=6 t=10 tracking local j=-",
  "6 i truth=12 c=6 t=12 tracking local j=-",
  "7 f truth=13 c=13 t=- tracking local j=-",
  "8 i truth=15 c=13 t=15 tracking local j=-",
  "9 i truth=17 c=13 t=17 tracking local j=-",
  "10 i truth=19 c=13 t=19 tracking local j=-",
  "11 f truth=20 c=20 t=- tracking local j=-",
  "12 i truth=22 c=20 t=22 tracking local j=-",
  "13 i truth=24 c=20 t=24 tracking local j=-",
  "14 f truth=26 c=26 t=- tracking local j=-",
  "15 i truth=28 c=26 t=28 tracking local j=-",
  "16 i truth=30 c=26 t=30 tracking local j=-",
  "17 i truth=32 c=26 t=32 tracking local j=-",
  "18 i truth=34 c=26 t=34 tracking local j=-",
  "19 f truth=35 c=35 t=- tracking local j=-",
  "20 i truth=37 c=35 t=37 tracking local j=-",
  "21 i truth=39 c=35 t=39 tracking local j=-",
  "22 i truth=41 c=35 t=41 tracking local j=-",
  "23 f truth=42 c=42 t=- tracking local j=-",
  "24 i truth=44 c=42 t=44 tracking local j=-",
  "25 i truth=46 c=42 t=46 tracking local j=-",
  "26 i truth=48 c=42 t=48 tracking local j=-",
  "27 i truth=50 c=42 t=50 tracking local j=-",
  "28 f truth=51 c=51 t=- tracking local j=-",
  "29 i truth=53 c=51 t=53 tracking local j=-",
  "30 i truth=55 c=51 t=55 tracking local j=-",
  "31 f truth=57 c=57 t=- tracking local j=-",
  "32 i truth=59 c=57 t=59 tracking local j=-",
  "33 i truth=61 c=57 t=61 tracking local j=-",
  "34 i truth=63 c=57 t=63 tracking local j=-",
  "35 i truth=65 c=57 t=65 tracking local j=-",
  "36 f truth=66 c=66 t=- tracking local j=-",
  "37 i truth=68 c=66 t=68 tracking local j=-",
  "38 i truth=70 c=66 t=70 tracking local j=-",
  "39 i truth=72 c=66 t=72 tracking local j=-",
  "40 i truth=74 c=66 t=74 tracking local j=-",
  "41 f truth=76 c=76 t=- tracking local j=-",
  "42 i truth=78 c=76 t=78 tracking local j=-",
  "43 i truth=80 c=76 t=80 tracking local j=-",
  "44 i truth=82 c=76 t=82 tracking local j=-",
  "45 i truth=84 c=76 t=84 tracking local j=-",
  "46 f truth=86 c=86 t=- tracking local j=-",
  "47 i truth=88 c=86 t=88 tracking local j=-",
  "48 i truth=90 c=86 t=90 tracking local j=-",
  "49 i truth=92 c=86 t=92 tracking local j=-",
  "50 i truth=94 c=86 t=94 tracking local j=-",
  "51 i truth=96 c=86 t=96 tracking local j=-",
  "52 f truth=98 c=98 t=- tracking local j=-",
  "53 i truth=100 c=98 t=100 tracking local j=-",
  "54 i truth=102 c=98 t=102 tracking local j=-",
  "55 i truth=104 c=98 t=104 tracking local j=-",
  "56 i truth=106 c=98 t=106 tracking local j=-",
  "57 i truth=108 c=98 t=108 tracking local j=-",
  "58 f truth=110 c=110 t=- tracking local j=-",
  "59 i truth=112 c=110 t=112 tracking local j=-",
  "60 i truth=114 c=110 t=114 tracking local j=-",
  "61 i truth=116 c=110 t=116 tracking local j=-",
  "62 f truth=118 c=118 t=- tracking local j=-",
  "63 i truth=120 c=118 t=120 tracking local j=-",
  "64 i truth=122 c=118 t=122 tracking local j=-",
  "65 i truth=124 c=118 t=124 tracking local j=-",
  "66 i truth=126 c=118 t=126 tracking local j=-",
  "67 i truth=128 c=118 t=128 tracking local j=-",
  "68 f truth=130 c=130 t=- tracking local j=-",
  "69 i truth=132 c=130 t=132 tracking local j=-",
  "70 i truth=134 c=130 t=134 tracking local j=-",
  "71 f truth=136 c=135 t=- tracking local j=-",
  "72 i truth=136 c=135 t=136 tracking local j=-",
  "77 f truth=110 c=136 t=- tracking local j=-",
  "82 f truth=119 c=136 t=- tracking none j=-",
  "88 f truth=130 c=136 t=- tracking hold j=-",
  "93 i truth=138 c=136 t=138 tracking hold j=-",
  "94 f truth=140 c=140 t=- tracking local j=-",
  "95 i truth=142 c=140 t=142 tracking local j=-",
  "96 i truth=144 c=140 t=144 tracking local j=-",
  "97 i truth=146 c=140 t=146 tracking local j=-",
  "98 f truth=148 c=148 t=- tracking local j=-",
  "99 i truth=150 c=148 t=150 tracking local j=-",
  "100 i truth=152 c=148 t=152 tracking local j=-",
  "101 i truth=154 c=148 t=154 tracking local j=-",
  "102 i truth=156 c=148 t=156 tracking local j=-",
  "103 i truth=158 c=148 t=158 tracking local j=-",
  "104 f truth=160 c=160 t=- tracking local j=-",
  "105 i truth=162 c=160 t=162 tracking local j=-",
  "106 i truth=164 c=160 t=164 tracking local j=-",
  "107 i truth=166 c=160 t=166 tracking local j=-",
  "108 i truth=168 c=160 t=168 tracking local j=-",
  "109 f truth=170 c=170 t=- tracking local j=-",
  "110 i truth=172 c=170 t=172 tracking local j=-",
  "111 i truth=174 c=170 t=174 tracking local j=-",
  "112 i truth=176 c=170 t=176 tracking local j=-",
  "113 i truth=178 c=170 t=178 tracking local j=-",
  "114 f truth=179 c=179 t=- tracking local j=-",
  "115 i truth=181 c=179 t=181 tracking local j=-",
  "116 i truth=183 c=179 t=183 tracking local j=-",
  "117 i truth=185 c=179 t=185 tracking local j=-",
  "118 f truth=187 c=187 t=- tracking local j=-",
  "119 i truth=189 c=187 t=189 tracking local j=-",
  "120 i truth=191 c=187 t=191 tracking local j=-",
  "121 f truth=193 c=193 t=- tracking local j=-",
  "122 i truth=195 c=193 t=195 tracking local j=-",
  "123 i truth=197 c=193 t=197 tracking local j=-",
  "124 f truth=199 c=199 t=- tracking local j=-",
  "125 i truth=201 c=199 t=201 tracking local j=-",
  "126 i truth=203 c=199 t=203 tracking local j=-",
  "127 i truth=205 c=199 t=205 tracking local j=-",
  "128 i truth=207 c=199 t=207 tracking local j=-",
  "129 i truth=209 c=199 t=209 tracking local j=-",
  "130 f truth=210 c=210 t=- tracking local j=-",
  "131 i truth=212 c=210 t=212 tracking local j=-",
  "132 i truth=214 c=210 t=214 tracking local j=-",
  "133 i truth=216 c=210 t=216 tracking local j=-",
  "134 f truth=217 c=217 t=- tracking local j=-",
  "135 i truth=219 c=217 t=219 tracking local j=-",
  "136 i truth=221 c=217 t=221 tracking local j=-",
  "137 i truth=223 c=217 t=223 tracking local j=-",
  "138 i truth=225 c=217 t=225 tracking local j=-",
  "139 f truth=227 c=227 t=- tracking local j=-",
  "140 i truth=229 c=227 t=229 tracking local j=-",
  "141 i truth=231 c=227 t=231 tracking local j=-",
  "142 i truth=233 c=227 t=233 tracking local j=-",
  "143 f truth=235 c=235 t=- tracking local j=-",
  "144 i truth=237 c=235 t=237 tracking local j=-",
  "145 i truth=239 c=235 t=239 tracking local j=-",
  "146 i truth=241 c=235 t=241 tracking local j=-",
  "147 i truth=243 c=235 t=243 tracking local j=-",
  "148 f truth=245 c=245 t=- tracking local j=-",
  "149 i truth=247 c=245 t=247 tracking local j=-",
  "150 i truth=249 c=245 t=249 tracking local j=-",
  "151 i truth=251 c=245 t=251 tracking local j=-",
  "152 f truth=252 c=252 t=- tracking local j=-",
  "153 i truth=254 c=252 t=254 tracking local j=-",
  "154 i truth=256 c=252 t=256 tracking local j=-",
  "155 f truth=256 c=256 t=- tracking local j=-",
]
`;

exports[`full-script baseline: talk > tracks "skips a paragraph" the same way 1`] = `
[
  "0 i truth=1 c=- t=1 tracking - j=-",
  "1 i truth=3 c=- t=3 tracking - j=-",
  "2 i truth=5 c=- t=5 tracking - j=-",
  "3 i truth=7 c=- t=7 tracking - j=-",
  "4 i truth=9 c=- t=9 tracking - j=-",
  "5 f truth=10 c=10 t=- tracking local j=-",
  "6 i truth=12 c=10 t=12 tracking local j=-",
  "7 i truth=14 c=10 t=14 tracking local j=-",
  "8 i truth=16 c=10 t=16 tracking local j=-",
  "9 f truth=18 c=18 t=- tracking local j=-",
  "10 i truth=20 c=18 t=20 tracking local j=-",
  "11 i truth=22 c=18 t=22 tracking local j=-",
  "12 i truth=24 c=18 t=24 tracking local j=-",
  "13 i truth=26 c=18 t=26 tracking local j=-",
  "14 f truth=27 c=27 t=- tracking local j=-",
  "15 i truth=29 c=27 t=29 tracking local j=-",
  "16 i truth=31 c=27 t=31 tracking local j=-",
  "17 i truth=33 c=27 t=33 tracking local j=-",
  "18 i truth=35 c=27 t=35 tracking local j=-",
  "19 i truth=37 c=27 t=37 tracking local j=-",
  "20 f truth=39 c=39 t=- tracking local j=-",
  "21 i truth=41 c=39 t=41 tracking local j=-",
  "22 i truth=43 c=39 t=43 tracking local j=-",
  "23 i truth=45 c=39 t=45 tracking local j=-",
  "24 i truth=47 c=39 t=47 tracking local j=-",
  "25 f truth=49 c=49 t=- tracking local j=-",
  "26 i truth=51 c=49 t=51 tracking local j=-",
  "27 i truth=53 c=49 t=53 tracking local j=-",
  "28 i truth=55 c=49 t=55 tracking local j=-",
  "29 i truth=57 c=49 t=57 tracking local j=-",
  "30 i truth=59 c=49 t=59 tracking local j=-",
  "31 f truth=61 c=61 t=- tracking local j=-",
  "32 i truth=63 c=61 t=63 tracking local j=-",
  "33 i truth=65 c=61 t=65 tracking local j=-",
  "34 i truth=67 c=61 t=67 tracking local j=-",
  "35 i truth=69 c=61 t=69 tracking local j=-",
  "36 f truth=70 c=70 t=- tracking local j=-",
  "37 i truth=72 c=70 t=72 tracking local j=-",
  "38 i truth=74 c=70 t=74 tracking local j=-",
  "39 i truth=76 c=70 t=76 tracking local j=-",
  "40 f truth=77 c=77 t=- tracking local j=-",
  "41 i truth=79 c=77 t=79 tracking local j=-",
  "42 i truth=81 c=77 t=81 tracking local j=-",
  "43 i truth=83 c=77 t=83 tracking local j=-",
  "44 i truth=85 c=77 t=85 tracking local j=-",
  "45 f truth=87 c=87 t=- tracking local j=-",
  "46 i truth=89 c=87 t=89 tracking local j=-",
  "47 i truth=91 c=87 t=91 tracking local j=-",
  "48 i truth=93 c=87 t=93 tracking local j=-",
  "49 i truth=95 c=87 t=95 tracking local j=-",
  "50 f truth=96 c=96 t=- tracking local j=-",
  "51 i truth=98 c=96 t=98 tracking local j=-",
  "52 i truth=100 c=96 t=100 tracking local j=-",
  "53 i truth=137 c=96 t=101 tracking local j=-",
  "54 f truth=139 c=101 t=- tracking local j=-",
  "55 i truth=141 c=101 t=141 tracking local j=-",
  "56 i truth=143 c=101 t=143 tracking local j=-",
  "57 i truth=145 c=101 t=145 tracking local j=-",
  "58 f truth=147 c=147 t=- tracking local j=-",
  "59 i truth=149 c=147 t=149 tracking local j=-",
  "60 i truth=151 c=147 t=151 tracking local j=-",
  "61 i truth=153 c=147 t=153 tracking local j=-",
  "62 i truth=155 c=147 t=155 tracking local j=-",
  "63 i truth=157 c=147 t=157 tracking local j=-",
  "64 f truth=158 c=158 t=- tracking local j=-",
  "65 i truth=160 c=158 t=160 tracking local j=-",
  "66 i truth=162 c=158 t=162 tracking local j=-",
  "67 i truth=164 c=158 t=164 tracking local j=-",
  "68 i truth=166 c=158 t=166 tracking local j=-",
  "69 i truth=168 c=158 t=168 tracking local j=-",
  "70 f truth=169 c=169 t=- tracking local j=-",
  "71 i truth=171 c=169 t=171 tracking local j=-",
  "72 i truth=173 c=169 t=173 tracking local j=-",
  "73 f truth=175 c=175 t=- tracking local j=-",
  "74 i truth=177 c=175 t=177 tracking local j=-",
  "75 i truth=179 c=175 t=179 tracking local j=-",
  "76 f truth=181 c=181 t=- tracking local j=-",
  "77 i truth=183 c=181 t=183 tracking local j=-",
  "78 i truth=185 c=181 t=185 tracking local j=-",
  "79 i truth=187 c=181 t=187 tracking local j=-",
  "80 i truth=189 c=181 t=189 tracking local j=-",
  "81 i truth=191 c=181 t=191 tracking local j=-",
  "82 f truth=192 c=192 t=- tracking local j=-",
  "83 i truth=194 c=192 t=194 tracking local j=-",
  "84 i truth=196 c=192 t=196 tracking local j=-",
  "85 i truth=198 c=192 t=198 tracking local j=-",
  "86 i truth=200 c=192 t=200 tracking local j=-",
  "87 f truth=202 c=202 t=- tracking local j=-",
  "88 i truth=204 c=202 t=204 tracking local j=-",
  "89 i truth=206 c=202 t=206 tracking local j=-",
  "90 i truth=208 c=202 t=208 tracking local j=-",
  "91 i truth=210 c=202 t=210 tracking local j=-",
  "92 i truth=212 c=202 t=212 tracking local j=-",
  "93 f truth=214 c=214 t=- tracking local j=-",
  "94 i truth=216 c=214 t=216 tracking local j=-",
  "95 i truth=218 c=214 t=218 tracking local j=-",
  "96 i truth=220 c=214 t=220 tracking local j=-",
  "97 f truth=221 c=221 t=- tracking local j=-",
  "98 i truth=223 c=221 t=223 tracking local j=-",
  "99 i truth=225 c=221 t=225 tracking local j=-",
  "100 i truth=227 c=221 t=227 tracking local j=-",
  "101 f truth=229 c=229 t=- tracking local j=-",
  "102 i truth=231 c=229 t=231 tracking local j=-",
  "103 i truth=233 c=229 t=233 tracking local j=-",
  "104 i truth=235 c=229 t=235 tracking local j=-",
  "105 i truth=237 c=229 t=237 tracking local j=-",
  "106 i truth=239 c=229 t=239 tracking local j=-",
  "107 f truth=240 c=240 t=- tracking local j=-",
  "108 i truth=242 c=240 t=242 tracking local j=-",
  "109 i truth=244 c=240 t=244 tracking local j=-",
  "110 i truth=246 c=240 t=246 tracking local j=-",
  "111 f truth=247 c=247 t=- tracking local j=-",
  "112 i truth=249 c=247 t=249 tracking local j=-",
  "113 i truth=251 c=247 t=251 tracking local j=-",
  "114 i truth=253 c=247 t=253 tracking local j=-",
  "115 i truth=255 c=247 t=255 tracking local j=-",
  "116 f truth=256 c=256 t=- tracking local j=-",
]
`;
